// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildLogsExtractionEsqlQuery generates the expected query for generic entity description 1`] = `
"FROM test-index-*
    METADATA _index
  | WHERE ((entity.id IS NOT NULL AND entity.id != \\"\\"))
      AND @timestamp > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
  | EVAL recent.entity.EngineMetadata.UntypedId = entity.id
  | STATS
    entity.EngineMetadata.FirstSeenLogInPage = MIN(@timestamp),
    recent.timestamp = MAX(@timestamp),
    recent.entity.name = LAST(TO_STRING(entity.name), @timestamp) WHERE entity.name IS NOT NULL,
 recent.entity.type = LAST(TO_STRING(entity.type), @timestamp) WHERE entity.type IS NOT NULL,
 recent.entity.sub_type = LAST(TO_STRING(entity.sub_type), @timestamp) WHERE entity.sub_type IS NOT NULL,
 recent.entity.url = LAST(TO_STRING(entity.url), @timestamp) WHERE entity.url IS NOT NULL,
 recent.entity.attributes.watchlists = LAST(TO_STRING(entity.attributes.watchlists), @timestamp) WHERE entity.attributes.watchlists IS NOT NULL,
 recent.entity.attributes.asset = LAST(TO_BOOLEAN(entity.attributes.asset), @timestamp) WHERE entity.attributes.asset IS NOT NULL,
 recent.entity.attributes.managed = LAST(TO_BOOLEAN(entity.attributes.managed), @timestamp) WHERE entity.attributes.managed IS NOT NULL,
 recent.entity.attributes.mfa_enabled = LAST(TO_BOOLEAN(entity.attributes.mfa_enabled), @timestamp) WHERE entity.attributes.mfa_enabled IS NOT NULL,
 recent.entity.lifecycle.first_seen = LAST(TO_DATETIME(entity.lifecycle.first_seen), @timestamp) WHERE entity.lifecycle.first_seen IS NOT NULL,
 recent.entity.lifecycle.last_activity = LAST(TO_DATETIME(entity.lifecycle.last_activity), @timestamp) WHERE entity.lifecycle.last_activity IS NOT NULL,
 recent.entity.behaviors.rule_names = TOP(MV_DEDUPE(TO_STRING(entity.behaviors.rule_names)), 100) WHERE entity.behaviors.rule_names IS NOT NULL,
 recent.entity.behaviors.anomaly_job_ids = TOP(MV_DEDUPE(TO_STRING(entity.behaviors.anomaly_job_ids)), 100) WHERE entity.behaviors.anomaly_job_ids IS NOT NULL,
 recent.cloud.account.id = LAST(TO_STRING(cloud.account.id), @timestamp) WHERE cloud.account.id IS NOT NULL,
 recent.cloud.account.name = LAST(TO_STRING(cloud.account.name), @timestamp) WHERE cloud.account.name IS NOT NULL,
 recent.cloud.availability_zone = LAST(TO_STRING(cloud.availability_zone), @timestamp) WHERE cloud.availability_zone IS NOT NULL,
 recent.cloud.instance.id = LAST(TO_STRING(cloud.instance.id), @timestamp) WHERE cloud.instance.id IS NOT NULL,
 recent.cloud.instance.name = LAST(TO_STRING(cloud.instance.name), @timestamp) WHERE cloud.instance.name IS NOT NULL,
 recent.cloud.machine.type = LAST(TO_STRING(cloud.machine.type), @timestamp) WHERE cloud.machine.type IS NOT NULL,
 recent.cloud.project.id = LAST(TO_STRING(cloud.project.id), @timestamp) WHERE cloud.project.id IS NOT NULL,
 recent.cloud.project.name = LAST(TO_STRING(cloud.project.name), @timestamp) WHERE cloud.project.name IS NOT NULL,
 recent.cloud.provider = LAST(TO_STRING(cloud.provider), @timestamp) WHERE cloud.provider IS NOT NULL,
 recent.cloud.region = LAST(TO_STRING(cloud.region), @timestamp) WHERE cloud.region IS NOT NULL,
 recent.cloud.service.name = LAST(TO_STRING(cloud.service.name), @timestamp) WHERE cloud.service.name IS NOT NULL,
 recent.orchestrator.api_version = LAST(TO_STRING(orchestrator.api_version), @timestamp) WHERE orchestrator.api_version IS NOT NULL,
 recent.orchestrator.cluster.id = LAST(TO_STRING(orchestrator.cluster.id), @timestamp) WHERE orchestrator.cluster.id IS NOT NULL,
 recent.orchestrator.cluster.name = LAST(TO_STRING(orchestrator.cluster.name), @timestamp) WHERE orchestrator.cluster.name IS NOT NULL,
 recent.orchestrator.cluster.url = LAST(TO_STRING(orchestrator.cluster.url), @timestamp) WHERE orchestrator.cluster.url IS NOT NULL,
 recent.orchestrator.cluster.version = LAST(TO_STRING(orchestrator.cluster.version), @timestamp) WHERE orchestrator.cluster.version IS NOT NULL,
 recent.orchestrator.namespace = LAST(TO_STRING(orchestrator.namespace), @timestamp) WHERE orchestrator.namespace IS NOT NULL,
 recent.orchestrator.organization = LAST(TO_STRING(orchestrator.organization), @timestamp) WHERE orchestrator.organization IS NOT NULL,
 recent.orchestrator.resource.annotation = LAST(TO_STRING(orchestrator.resource.annotation), @timestamp) WHERE orchestrator.resource.annotation IS NOT NULL,
 recent.orchestrator.resource.id = LAST(TO_STRING(orchestrator.resource.id), @timestamp) WHERE orchestrator.resource.id IS NOT NULL,
 recent.orchestrator.resource.ip = LAST(TO_STRING(orchestrator.resource.ip), @timestamp) WHERE orchestrator.resource.ip IS NOT NULL,
 recent.orchestrator.resource.label = LAST(TO_STRING(orchestrator.resource.label), @timestamp) WHERE orchestrator.resource.label IS NOT NULL,
 recent.orchestrator.resource.name = LAST(TO_STRING(orchestrator.resource.name), @timestamp) WHERE orchestrator.resource.name IS NOT NULL,
 recent.orchestrator.resource.parent.type = LAST(TO_STRING(orchestrator.resource.parent.type), @timestamp) WHERE orchestrator.resource.parent.type IS NOT NULL,
 recent.orchestrator.resource.type = LAST(TO_STRING(orchestrator.resource.type), @timestamp) WHERE orchestrator.resource.type IS NOT NULL,
 recent.orchestrator.type = LAST(TO_STRING(orchestrator.type), @timestamp) WHERE orchestrator.type IS NOT NULL,
 recent.entity.source = TOP(MV_DEDUPE(TO_STRING(event.dataset)), 50) WHERE event.dataset IS NOT NULL,
 recent.asset.id = LAST(TO_STRING(asset.id), @timestamp) WHERE asset.id IS NOT NULL,
 recent.asset.name = LAST(TO_STRING(asset.name), @timestamp) WHERE asset.name IS NOT NULL,
 recent.asset.owner = LAST(TO_STRING(asset.owner), @timestamp) WHERE asset.owner IS NOT NULL,
 recent.asset.serial_number = LAST(TO_STRING(asset.serial_number), @timestamp) WHERE asset.serial_number IS NOT NULL,
 recent.asset.model = LAST(TO_STRING(asset.model), @timestamp) WHERE asset.model IS NOT NULL,
 recent.asset.vendor = LAST(TO_STRING(asset.vendor), @timestamp) WHERE asset.vendor IS NOT NULL,
 recent.asset.environment = LAST(TO_STRING(asset.environment), @timestamp) WHERE asset.environment IS NOT NULL,
 recent.asset.criticality = LAST(TO_STRING(asset.criticality), @timestamp) WHERE asset.criticality IS NOT NULL,
 recent.asset.business_unit = LAST(TO_STRING(asset.business_unit), @timestamp) WHERE asset.business_unit IS NOT NULL,
 recent.entity.relationships.accesses_frequently = TOP(MV_DEDUPE(TO_STRING(entity.relationships.Accesses_frequently)), 10) WHERE entity.relationships.Accesses_frequently IS NOT NULL,
 recent.entity.relationships.communicates_with = TOP(MV_DEDUPE(TO_STRING(entity.relationships.Communicates_with)), 10) WHERE entity.relationships.Communicates_with IS NOT NULL,
 recent.entity.relationships.depends_on = TOP(MV_DEDUPE(TO_STRING(entity.relationships.Depends_on)), 10) WHERE entity.relationships.Depends_on IS NOT NULL,
 recent.entity.relationships.owns = TOP(MV_DEDUPE(TO_STRING(entity.relationships.Owns)), 10) WHERE entity.relationships.Owns IS NOT NULL,
 recent.entity.relationships.owns_inferred = LAST(TO_STRING(entity.relationships.owns_inferred), @timestamp) WHERE entity.relationships.owns_inferred IS NOT NULL,
 recent.entity.relationships.accesses_infrequently = LAST(TO_STRING(entity.relationships.accesses_infrequently), @timestamp) WHERE entity.relationships.accesses_infrequently IS NOT NULL,
 recent.entity.relationships.resolution.resolved_to = LAST(TO_STRING(entity.relationships.resolution.resolved_to), @timestamp) WHERE entity.relationships.resolution.resolved_to IS NOT NULL,
 recent.entity.relationships.resolution.risk.calculated_level = LAST(TO_STRING(entity.relationships.resolution.risk.calculated_level), @timestamp) WHERE entity.relationships.resolution.risk.calculated_level IS NOT NULL,
 recent.entity.relationships.resolution.risk.calculated_score = LAST(TO_DOUBLE(entity.relationships.resolution.risk.calculated_score), @timestamp) WHERE entity.relationships.resolution.risk.calculated_score IS NOT NULL,
 recent.entity.relationships.resolution.risk.calculated_score_norm = LAST(TO_DOUBLE(entity.relationships.resolution.risk.calculated_score_norm), @timestamp) WHERE entity.relationships.resolution.risk.calculated_score_norm IS NOT NULL
    BY recent.entity.EngineMetadata.UntypedId
  | SORT entity.EngineMetadata.FirstSeenLogInPage ASC, recent.entity.EngineMetadata.UntypedId ASC
  
  | LIMIT 10000
  | EVAL recent.entity.id = CONCAT(\\"generic:\\", recent.entity.EngineMetadata.UntypedId)
  | LOOKUP JOIN latest-index
      ON recent.entity.id == entity.id
  | EVAL entity.name = COALESCE(recent.entity.name, entity.name),
 entity.type = COALESCE(recent.entity.type, entity.type),
 entity.sub_type = COALESCE(recent.entity.sub_type, entity.sub_type),
 entity.url = COALESCE(recent.entity.url, entity.url),
 entity.attributes.watchlists = COALESCE(recent.entity.attributes.watchlists, entity.attributes.watchlists),
 entity.attributes.asset = COALESCE(recent.entity.attributes.asset, entity.attributes.asset),
 entity.attributes.managed = COALESCE(recent.entity.attributes.managed, entity.attributes.managed),
 entity.attributes.mfa_enabled = COALESCE(recent.entity.attributes.mfa_enabled, entity.attributes.mfa_enabled),
 entity.lifecycle.first_seen = COALESCE(recent.entity.lifecycle.first_seen, entity.lifecycle.first_seen),
 entity.lifecycle.last_activity = COALESCE(recent.entity.lifecycle.last_activity, entity.lifecycle.last_activity),
 entity.behaviors.rule_names = MV_SLICE(MV_UNION(recent.entity.behaviors.rule_names, entity.behaviors.rule_names), 0, 99),
 entity.behaviors.anomaly_job_ids = MV_SLICE(MV_UNION(recent.entity.behaviors.anomaly_job_ids, entity.behaviors.anomaly_job_ids), 0, 99),
 cloud.account.id = COALESCE(recent.cloud.account.id, cloud.account.id),
 cloud.account.name = COALESCE(recent.cloud.account.name, cloud.account.name),
 cloud.availability_zone = COALESCE(recent.cloud.availability_zone, cloud.availability_zone),
 cloud.instance.id = COALESCE(recent.cloud.instance.id, cloud.instance.id),
 cloud.instance.name = COALESCE(recent.cloud.instance.name, cloud.instance.name),
 cloud.machine.type = COALESCE(recent.cloud.machine.type, cloud.machine.type),
 cloud.project.id = COALESCE(recent.cloud.project.id, cloud.project.id),
 cloud.project.name = COALESCE(recent.cloud.project.name, cloud.project.name),
 cloud.provider = COALESCE(recent.cloud.provider, cloud.provider),
 cloud.region = COALESCE(recent.cloud.region, cloud.region),
 cloud.service.name = COALESCE(recent.cloud.service.name, cloud.service.name),
 orchestrator.api_version = COALESCE(recent.orchestrator.api_version, orchestrator.api_version),
 orchestrator.cluster.id = COALESCE(recent.orchestrator.cluster.id, orchestrator.cluster.id),
 orchestrator.cluster.name = COALESCE(recent.orchestrator.cluster.name, orchestrator.cluster.name),
 orchestrator.cluster.url = COALESCE(recent.orchestrator.cluster.url, orchestrator.cluster.url),
 orchestrator.cluster.version = COALESCE(recent.orchestrator.cluster.version, orchestrator.cluster.version),
 orchestrator.namespace = COALESCE(recent.orchestrator.namespace, orchestrator.namespace),
 orchestrator.organization = COALESCE(recent.orchestrator.organization, orchestrator.organization),
 orchestrator.resource.annotation = COALESCE(recent.orchestrator.resource.annotation, orchestrator.resource.annotation),
 orchestrator.resource.id = COALESCE(recent.orchestrator.resource.id, orchestrator.resource.id),
 orchestrator.resource.ip = COALESCE(recent.orchestrator.resource.ip, orchestrator.resource.ip),
 orchestrator.resource.label = COALESCE(recent.orchestrator.resource.label, orchestrator.resource.label),
 orchestrator.resource.name = COALESCE(recent.orchestrator.resource.name, orchestrator.resource.name),
 orchestrator.resource.parent.type = COALESCE(recent.orchestrator.resource.parent.type, orchestrator.resource.parent.type),
 orchestrator.resource.type = COALESCE(recent.orchestrator.resource.type, orchestrator.resource.type),
 orchestrator.type = COALESCE(recent.orchestrator.type, orchestrator.type),
 entity.source = MV_SLICE(MV_UNION(recent.entity.source, entity.source), 0, 49),
 asset.id = COALESCE(recent.asset.id, asset.id),
 asset.name = COALESCE(recent.asset.name, asset.name),
 asset.owner = COALESCE(recent.asset.owner, asset.owner),
 asset.serial_number = COALESCE(recent.asset.serial_number, asset.serial_number),
 asset.model = COALESCE(recent.asset.model, asset.model),
 asset.vendor = COALESCE(recent.asset.vendor, asset.vendor),
 asset.environment = COALESCE(recent.asset.environment, asset.environment),
 asset.criticality = COALESCE(recent.asset.criticality, asset.criticality),
 asset.business_unit = COALESCE(recent.asset.business_unit, asset.business_unit),
 entity.relationships.accesses_frequently = MV_SLICE(MV_UNION(recent.entity.relationships.accesses_frequently, entity.relationships.accesses_frequently), 0, 9),
 entity.relationships.communicates_with = MV_SLICE(MV_UNION(recent.entity.relationships.communicates_with, entity.relationships.communicates_with), 0, 9),
 entity.relationships.depends_on = MV_SLICE(MV_UNION(recent.entity.relationships.depends_on, entity.relationships.depends_on), 0, 9),
 entity.relationships.owns = MV_SLICE(MV_UNION(recent.entity.relationships.owns, entity.relationships.owns), 0, 9),
 entity.relationships.owns_inferred = COALESCE(recent.entity.relationships.owns_inferred, entity.relationships.owns_inferred),
 entity.relationships.accesses_infrequently = COALESCE(recent.entity.relationships.accesses_infrequently, entity.relationships.accesses_infrequently),
 entity.relationships.resolution.resolved_to = COALESCE(recent.entity.relationships.resolution.resolved_to, entity.relationships.resolution.resolved_to),
 entity.relationships.resolution.risk.calculated_level = COALESCE(recent.entity.relationships.resolution.risk.calculated_level, entity.relationships.resolution.risk.calculated_level),
 entity.relationships.resolution.risk.calculated_score = COALESCE(recent.entity.relationships.resolution.risk.calculated_score, entity.relationships.resolution.risk.calculated_score),
 entity.relationships.resolution.risk.calculated_score_norm = COALESCE(recent.entity.relationships.resolution.risk.calculated_score_norm, entity.relationships.resolution.risk.calculated_score_norm)
  | EVAL @timestamp = recent.timestamp,
 entity.name = CASE(entity.name IS NOT NULL AND entity.name != \\"\\", entity.name, recent.entity.EngineMetadata.UntypedId),
 entity.EngineMetadata.Type = \\"generic\\",
 entity.hashedId = HASH(\\"MD5\\", recent.entity.id)
  | RENAME
    recent.entity.id AS entity.id,
    recent.entity.EngineMetadata.UntypedId AS entity.EngineMetadata.UntypedId
  | KEEP entity.name,
 entity.type,
 entity.sub_type,
 entity.url,
 entity.attributes.watchlists,
 entity.attributes.asset,
 entity.attributes.managed,
 entity.attributes.mfa_enabled,
 entity.lifecycle.first_seen,
 entity.lifecycle.last_activity,
 entity.behaviors.rule_names,
 entity.behaviors.anomaly_job_ids,
 cloud.account.id,
 cloud.account.name,
 cloud.availability_zone,
 cloud.instance.id,
 cloud.instance.name,
 cloud.machine.type,
 cloud.project.id,
 cloud.project.name,
 cloud.provider,
 cloud.region,
 cloud.service.name,
 orchestrator.api_version,
 orchestrator.cluster.id,
 orchestrator.cluster.name,
 orchestrator.cluster.url,
 orchestrator.cluster.version,
 orchestrator.namespace,
 orchestrator.organization,
 orchestrator.resource.annotation,
 orchestrator.resource.id,
 orchestrator.resource.ip,
 orchestrator.resource.label,
 orchestrator.resource.name,
 orchestrator.resource.parent.type,
 orchestrator.resource.type,
 orchestrator.type,
 entity.source,
 asset.id,
 asset.name,
 asset.owner,
 asset.serial_number,
 asset.model,
 asset.vendor,
 asset.environment,
 asset.criticality,
 asset.business_unit,
 entity.relationships.accesses_frequently,
 entity.relationships.communicates_with,
 entity.relationships.depends_on,
 entity.relationships.owns,
 entity.relationships.owns_inferred,
 entity.relationships.accesses_infrequently,
 entity.relationships.resolution.resolved_to,
 entity.relationships.resolution.risk.calculated_level,
 entity.relationships.resolution.risk.calculated_score,
 entity.relationships.resolution.risk.calculated_score_norm,
 @timestamp,
 entity.id,
 entity.name,
 entity.EngineMetadata.UntypedId,
 entity.hashedId,
 entity.EngineMetadata.Type,
 entity.EngineMetadata.FirstSeenLogInPage"
`;

exports[`buildLogsExtractionEsqlQuery generates the expected query for host entity description 1`] = `
"FROM test-index-*
    METADATA _index
  | WHERE ((host.entity.id IS NOT NULL AND host.entity.id != \\"\\") OR (host.id IS NOT NULL AND host.id != \\"\\") OR (host.name IS NOT NULL AND host.name != \\"\\") OR (host.hostname IS NOT NULL AND host.hostname != \\"\\"))
      AND @timestamp > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
  | EVAL recent.entity.EngineMetadata.UntypedId = CASE((host.entity.id IS NOT NULL AND host.entity.id != \\"\\"), host.entity.id,
(host.id IS NOT NULL AND host.id != \\"\\"), host.id,
(host.name IS NOT NULL AND host.name != \\"\\" AND host.domain IS NOT NULL AND host.domain != \\"\\"), CONCAT(host.name, \\".\\", host.domain),
(host.hostname IS NOT NULL AND host.hostname != \\"\\" AND host.domain IS NOT NULL AND host.domain != \\"\\"), CONCAT(host.hostname, \\".\\", host.domain),
(host.name IS NOT NULL AND host.name != \\"\\"), host.name,
(host.hostname IS NOT NULL AND host.hostname != \\"\\"), host.hostname, NULL)
  | STATS
    entity.EngineMetadata.FirstSeenLogInPage = MIN(@timestamp),
    recent.timestamp = MAX(@timestamp),
    recent.entity.name = LAST(TO_STRING(host.name), @timestamp) WHERE host.name IS NOT NULL,
 recent.host.entity.id = FIRST(TO_STRING(host.entity.id), @timestamp) WHERE host.entity.id IS NOT NULL,
 recent.host.name = TOP(MV_DEDUPE(TO_STRING(host.name)), 10) WHERE host.name IS NOT NULL,
 recent.host.domain = TOP(MV_DEDUPE(TO_STRING(host.domain)), 10) WHERE host.domain IS NOT NULL,
 recent.host.hostname = TOP(MV_DEDUPE(TO_STRING(host.hostname)), 10) WHERE host.hostname IS NOT NULL,
 recent.host.id = TOP(MV_DEDUPE(TO_STRING(host.id)), 10) WHERE host.id IS NOT NULL,
 recent.host.os.name = TOP(MV_DEDUPE(TO_STRING(host.os.name)), 10) WHERE host.os.name IS NOT NULL,
 recent.host.os.type = TOP(MV_DEDUPE(TO_STRING(host.os.type)), 10) WHERE host.os.type IS NOT NULL,
 recent.host.ip = TOP(MV_DEDUPE(TO_IP(host.ip)), 10) WHERE host.ip IS NOT NULL,
 recent.host.mac = TOP(MV_DEDUPE(TO_STRING(host.mac)), 10) WHERE host.mac IS NOT NULL,
 recent.host.type = TOP(MV_DEDUPE(TO_STRING(host.type)), 10) WHERE host.type IS NOT NULL,
 recent.host.architecture = TOP(MV_DEDUPE(TO_STRING(host.architecture)), 10) WHERE host.architecture IS NOT NULL,
 recent.host.boot.id = TOP(MV_DEDUPE(TO_STRING(host.boot.id)), 10) WHERE host.boot.id IS NOT NULL,
 recent.host.cpu.usage = LAST(host.cpu.usage, @timestamp) WHERE host.cpu.usage IS NOT NULL,
 recent.host.disk.read.bytes = TOP(MV_DEDUPE(TO_LONG(host.disk.read.bytes)), 10) WHERE host.disk.read.bytes IS NOT NULL,
 recent.host.disk.write.bytes = TOP(MV_DEDUPE(TO_LONG(host.disk.write.bytes)), 10) WHERE host.disk.write.bytes IS NOT NULL,
 recent.host.network.egress.bytes = TOP(MV_DEDUPE(TO_LONG(host.network.egress.bytes)), 10) WHERE host.network.egress.bytes IS NOT NULL,
 recent.host.network.egress.packets = TOP(MV_DEDUPE(TO_LONG(host.network.egress.packets)), 10) WHERE host.network.egress.packets IS NOT NULL,
 recent.host.network.ingress.bytes = TOP(MV_DEDUPE(TO_LONG(host.network.ingress.bytes)), 10) WHERE host.network.ingress.bytes IS NOT NULL,
 recent.host.network.ingress.packets = TOP(MV_DEDUPE(TO_LONG(host.network.ingress.packets)), 10) WHERE host.network.ingress.packets IS NOT NULL,
 recent.host.pid_ns_ino = TOP(MV_DEDUPE(TO_STRING(host.pid_ns_ino)), 10) WHERE host.pid_ns_ino IS NOT NULL,
 recent.host.uptime = TOP(MV_DEDUPE(TO_LONG(host.uptime)), 10) WHERE host.uptime IS NOT NULL,
 recent.host.os.family = TOP(MV_DEDUPE(TO_STRING(host.os.family)), 10) WHERE host.os.family IS NOT NULL,
 recent.host.os.full = TOP(MV_DEDUPE(TO_STRING(host.os.full)), 10) WHERE host.os.full IS NOT NULL,
 recent.host.os.kernel = TOP(MV_DEDUPE(TO_STRING(host.os.kernel)), 10) WHERE host.os.kernel IS NOT NULL,
 recent.host.os.platform = TOP(MV_DEDUPE(TO_STRING(host.os.platform)), 10) WHERE host.os.platform IS NOT NULL,
 recent.host.os.version = TOP(MV_DEDUPE(TO_STRING(host.os.version)), 10) WHERE host.os.version IS NOT NULL,
 recent.host.geo.city_name = TOP(MV_DEDUPE(TO_STRING(host.geo.city_name)), 10) WHERE host.geo.city_name IS NOT NULL,
 recent.host.geo.continent_code = TOP(MV_DEDUPE(TO_STRING(host.geo.continent_code)), 10) WHERE host.geo.continent_code IS NOT NULL,
 recent.host.geo.continent_name = TOP(MV_DEDUPE(TO_STRING(host.geo.continent_name)), 10) WHERE host.geo.continent_name IS NOT NULL,
 recent.host.geo.country_iso_code = TOP(MV_DEDUPE(TO_STRING(host.geo.country_iso_code)), 10) WHERE host.geo.country_iso_code IS NOT NULL,
 recent.host.geo.country_name = TOP(MV_DEDUPE(TO_STRING(host.geo.country_name)), 10) WHERE host.geo.country_name IS NOT NULL,
 recent.host.geo.name = TOP(MV_DEDUPE(TO_STRING(host.geo.name)), 10) WHERE host.geo.name IS NOT NULL,
 recent.host.geo.postal_code = TOP(MV_DEDUPE(TO_STRING(host.geo.postal_code)), 10) WHERE host.geo.postal_code IS NOT NULL,
 recent.host.geo.region_iso_code = TOP(MV_DEDUPE(TO_STRING(host.geo.region_iso_code)), 10) WHERE host.geo.region_iso_code IS NOT NULL,
 recent.host.geo.region_name = TOP(MV_DEDUPE(TO_STRING(host.geo.region_name)), 10) WHERE host.geo.region_name IS NOT NULL,
 recent.host.geo.timezone = TOP(MV_DEDUPE(TO_STRING(host.geo.timezone)), 10) WHERE host.geo.timezone IS NOT NULL,
 recent.entity.source = TOP(MV_DEDUPE(TO_STRING(event.dataset)), 50) WHERE event.dataset IS NOT NULL,
 recent.asset.id = LAST(TO_STRING(asset.id), @timestamp) WHERE asset.id IS NOT NULL,
 recent.asset.name = LAST(TO_STRING(asset.name), @timestamp) WHERE asset.name IS NOT NULL,
 recent.asset.owner = LAST(TO_STRING(asset.owner), @timestamp) WHERE asset.owner IS NOT NULL,
 recent.asset.serial_number = LAST(TO_STRING(asset.serial_number), @timestamp) WHERE asset.serial_number IS NOT NULL,
 recent.asset.model = LAST(TO_STRING(asset.model), @timestamp) WHERE asset.model IS NOT NULL,
 recent.asset.vendor = LAST(TO_STRING(asset.vendor), @timestamp) WHERE asset.vendor IS NOT NULL,
 recent.asset.environment = LAST(TO_STRING(asset.environment), @timestamp) WHERE asset.environment IS NOT NULL,
 recent.asset.criticality = LAST(TO_STRING(asset.criticality), @timestamp) WHERE asset.criticality IS NOT NULL,
 recent.asset.business_unit = LAST(TO_STRING(asset.business_unit), @timestamp) WHERE asset.business_unit IS NOT NULL,
 recent.entity.type = LAST(TO_STRING(host.entity.type), @timestamp) WHERE host.entity.type IS NOT NULL,
 recent.entity.sub_type = LAST(TO_STRING(host.entity.sub_type), @timestamp) WHERE host.entity.sub_type IS NOT NULL,
 recent.entity.url = LAST(TO_STRING(host.entity.url), @timestamp) WHERE host.entity.url IS NOT NULL,
 recent.entity.attributes.watchlists = LAST(TO_STRING(host.entity.attributes.watchlists), @timestamp) WHERE host.entity.attributes.watchlists IS NOT NULL,
 recent.entity.attributes.asset = LAST(TO_BOOLEAN(host.entity.attributes.asset), @timestamp) WHERE host.entity.attributes.asset IS NOT NULL,
 recent.entity.attributes.managed = LAST(TO_BOOLEAN(host.entity.attributes.managed), @timestamp) WHERE host.entity.attributes.managed IS NOT NULL,
 recent.entity.attributes.mfa_enabled = LAST(TO_BOOLEAN(host.entity.attributes.mfa_enabled), @timestamp) WHERE host.entity.attributes.mfa_enabled IS NOT NULL,
 recent.entity.lifecycle.first_seen = LAST(TO_DATETIME(host.entity.lifecycle.first_seen), @timestamp) WHERE host.entity.lifecycle.first_seen IS NOT NULL,
 recent.entity.lifecycle.last_activity = LAST(TO_DATETIME(host.entity.lifecycle.last_activity), @timestamp) WHERE host.entity.lifecycle.last_activity IS NOT NULL,
 recent.entity.behaviors.rule_names = TOP(MV_DEDUPE(TO_STRING(host.entity.behaviors.rule_names)), 100) WHERE host.entity.behaviors.rule_names IS NOT NULL,
 recent.entity.behaviors.anomaly_job_ids = TOP(MV_DEDUPE(TO_STRING(host.entity.behaviors.anomaly_job_ids)), 100) WHERE host.entity.behaviors.anomaly_job_ids IS NOT NULL,
 recent.entity.relationships.communicates_with = TOP(MV_DEDUPE(TO_STRING(host.entity.relationships.Communicates_with)), 10) WHERE host.entity.relationships.Communicates_with IS NOT NULL,
 recent.entity.relationships.depends_on = TOP(MV_DEDUPE(TO_STRING(host.entity.relationships.Depends_on)), 10) WHERE host.entity.relationships.Depends_on IS NOT NULL,
 recent.entity.relationships.owns_inferred = LAST(TO_STRING(entity.relationships.owns_inferred), @timestamp) WHERE entity.relationships.owns_inferred IS NOT NULL,
 recent.entity.relationships.accesses_infrequently = LAST(TO_STRING(entity.relationships.accesses_infrequently), @timestamp) WHERE entity.relationships.accesses_infrequently IS NOT NULL,
 recent.entity.relationships.resolution.resolved_to = LAST(TO_STRING(entity.relationships.resolution.resolved_to), @timestamp) WHERE entity.relationships.resolution.resolved_to IS NOT NULL,
 recent.entity.relationships.resolution.risk.calculated_level = LAST(TO_STRING(entity.relationships.resolution.risk.calculated_level), @timestamp) WHERE entity.relationships.resolution.risk.calculated_level IS NOT NULL,
 recent.entity.relationships.resolution.risk.calculated_score = LAST(TO_DOUBLE(entity.relationships.resolution.risk.calculated_score), @timestamp) WHERE entity.relationships.resolution.risk.calculated_score IS NOT NULL,
 recent.entity.relationships.resolution.risk.calculated_score_norm = LAST(TO_DOUBLE(entity.relationships.resolution.risk.calculated_score_norm), @timestamp) WHERE entity.relationships.resolution.risk.calculated_score_norm IS NOT NULL
    BY recent.entity.EngineMetadata.UntypedId
  | SORT entity.EngineMetadata.FirstSeenLogInPage ASC, recent.entity.EngineMetadata.UntypedId ASC
  
  | LIMIT 10000
  | EVAL recent.entity.id = CONCAT(\\"host:\\", recent.entity.EngineMetadata.UntypedId)
  | LOOKUP JOIN latest-index
      ON recent.entity.id == entity.id
  | EVAL entity.name = COALESCE(recent.entity.name, entity.name),
 host.entity.id = COALESCE(host.entity.id, recent.host.entity.id),
 host.name = MV_SLICE(MV_UNION(recent.host.name, host.name), 0, 9),
 host.domain = MV_SLICE(MV_UNION(recent.host.domain, host.domain), 0, 9),
 host.hostname = MV_SLICE(MV_UNION(recent.host.hostname, host.hostname), 0, 9),
 host.id = MV_SLICE(MV_UNION(recent.host.id, host.id), 0, 9),
 host.os.name = MV_SLICE(MV_UNION(recent.host.os.name, host.os.name), 0, 9),
 host.os.type = MV_SLICE(MV_UNION(recent.host.os.type, host.os.type), 0, 9),
 host.ip = MV_SLICE(MV_UNION(recent.host.ip, host.ip), 0, 9),
 host.mac = MV_SLICE(MV_UNION(recent.host.mac, host.mac), 0, 9),
 host.type = MV_SLICE(MV_UNION(recent.host.type, host.type), 0, 9),
 host.architecture = MV_SLICE(MV_UNION(recent.host.architecture, host.architecture), 0, 9),
 host.boot.id = MV_SLICE(MV_UNION(recent.host.boot.id, host.boot.id), 0, 9),
 host.cpu.usage = COALESCE(recent.host.cpu.usage, host.cpu.usage),
 host.disk.read.bytes = MV_SLICE(MV_UNION(recent.host.disk.read.bytes, host.disk.read.bytes), 0, 9),
 host.disk.write.bytes = MV_SLICE(MV_UNION(recent.host.disk.write.bytes, host.disk.write.bytes), 0, 9),
 host.network.egress.bytes = MV_SLICE(MV_UNION(recent.host.network.egress.bytes, host.network.egress.bytes), 0, 9),
 host.network.egress.packets = MV_SLICE(MV_UNION(recent.host.network.egress.packets, host.network.egress.packets), 0, 9),
 host.network.ingress.bytes = MV_SLICE(MV_UNION(recent.host.network.ingress.bytes, host.network.ingress.bytes), 0, 9),
 host.network.ingress.packets = MV_SLICE(MV_UNION(recent.host.network.ingress.packets, host.network.ingress.packets), 0, 9),
 host.pid_ns_ino = MV_SLICE(MV_UNION(recent.host.pid_ns_ino, host.pid_ns_ino), 0, 9),
 host.uptime = MV_SLICE(MV_UNION(recent.host.uptime, host.uptime), 0, 9),
 host.os.family = MV_SLICE(MV_UNION(recent.host.os.family, host.os.family), 0, 9),
 host.os.full = MV_SLICE(MV_UNION(recent.host.os.full, host.os.full), 0, 9),
 host.os.kernel = MV_SLICE(MV_UNION(recent.host.os.kernel, host.os.kernel), 0, 9),
 host.os.platform = MV_SLICE(MV_UNION(recent.host.os.platform, host.os.platform), 0, 9),
 host.os.version = MV_SLICE(MV_UNION(recent.host.os.version, host.os.version), 0, 9),
 host.geo.city_name = MV_SLICE(MV_UNION(recent.host.geo.city_name, host.geo.city_name), 0, 9),
 host.geo.continent_code = MV_SLICE(MV_UNION(recent.host.geo.continent_code, host.geo.continent_code), 0, 9),
 host.geo.continent_name = MV_SLICE(MV_UNION(recent.host.geo.continent_name, host.geo.continent_name), 0, 9),
 host.geo.country_iso_code = MV_SLICE(MV_UNION(recent.host.geo.country_iso_code, host.geo.country_iso_code), 0, 9),
 host.geo.country_name = MV_SLICE(MV_UNION(recent.host.geo.country_name, host.geo.country_name), 0, 9),
 host.geo.name = MV_SLICE(MV_UNION(recent.host.geo.name, host.geo.name), 0, 9),
 host.geo.postal_code = MV_SLICE(MV_UNION(recent.host.geo.postal_code, host.geo.postal_code), 0, 9),
 host.geo.region_iso_code = MV_SLICE(MV_UNION(recent.host.geo.region_iso_code, host.geo.region_iso_code), 0, 9),
 host.geo.region_name = MV_SLICE(MV_UNION(recent.host.geo.region_name, host.geo.region_name), 0, 9),
 host.geo.timezone = MV_SLICE(MV_UNION(recent.host.geo.timezone, host.geo.timezone), 0, 9),
 entity.source = MV_SLICE(MV_UNION(recent.entity.source, entity.source), 0, 49),
 asset.id = COALESCE(recent.asset.id, asset.id),
 asset.name = COALESCE(recent.asset.name, asset.name),
 asset.owner = COALESCE(recent.asset.owner, asset.owner),
 asset.serial_number = COALESCE(recent.asset.serial_number, asset.serial_number),
 asset.model = COALESCE(recent.asset.model, asset.model),
 asset.vendor = COALESCE(recent.asset.vendor, asset.vendor),
 asset.environment = COALESCE(recent.asset.environment, asset.environment),
 asset.criticality = COALESCE(recent.asset.criticality, asset.criticality),
 asset.business_unit = COALESCE(recent.asset.business_unit, asset.business_unit),
 entity.type = COALESCE(recent.entity.type, entity.type),
 entity.sub_type = COALESCE(recent.entity.sub_type, entity.sub_type),
 entity.url = COALESCE(recent.entity.url, entity.url),
 entity.attributes.watchlists = COALESCE(recent.entity.attributes.watchlists, entity.attributes.watchlists),
 entity.attributes.asset = COALESCE(recent.entity.attributes.asset, entity.attributes.asset),
 entity.attributes.managed = COALESCE(recent.entity.attributes.managed, entity.attributes.managed),
 entity.attributes.mfa_enabled = COALESCE(recent.entity.attributes.mfa_enabled, entity.attributes.mfa_enabled),
 entity.lifecycle.first_seen = COALESCE(recent.entity.lifecycle.first_seen, entity.lifecycle.first_seen),
 entity.lifecycle.last_activity = COALESCE(recent.entity.lifecycle.last_activity, entity.lifecycle.last_activity),
 entity.behaviors.rule_names = MV_SLICE(MV_UNION(recent.entity.behaviors.rule_names, entity.behaviors.rule_names), 0, 99),
 entity.behaviors.anomaly_job_ids = MV_SLICE(MV_UNION(recent.entity.behaviors.anomaly_job_ids, entity.behaviors.anomaly_job_ids), 0, 99),
 entity.relationships.communicates_with = MV_SLICE(MV_UNION(recent.entity.relationships.communicates_with, entity.relationships.communicates_with), 0, 9),
 entity.relationships.depends_on = MV_SLICE(MV_UNION(recent.entity.relationships.depends_on, entity.relationships.depends_on), 0, 9),
 entity.relationships.owns_inferred = COALESCE(recent.entity.relationships.owns_inferred, entity.relationships.owns_inferred),
 entity.relationships.accesses_infrequently = COALESCE(recent.entity.relationships.accesses_infrequently, entity.relationships.accesses_infrequently),
 entity.relationships.resolution.resolved_to = COALESCE(recent.entity.relationships.resolution.resolved_to, entity.relationships.resolution.resolved_to),
 entity.relationships.resolution.risk.calculated_level = COALESCE(recent.entity.relationships.resolution.risk.calculated_level, entity.relationships.resolution.risk.calculated_level),
 entity.relationships.resolution.risk.calculated_score = COALESCE(recent.entity.relationships.resolution.risk.calculated_score, entity.relationships.resolution.risk.calculated_score),
 entity.relationships.resolution.risk.calculated_score_norm = COALESCE(recent.entity.relationships.resolution.risk.calculated_score_norm, entity.relationships.resolution.risk.calculated_score_norm)
  | EVAL @timestamp = recent.timestamp,
 entity.name = CASE(entity.name IS NOT NULL AND entity.name != \\"\\", entity.name, recent.entity.EngineMetadata.UntypedId),
 entity.EngineMetadata.Type = \\"host\\",
 entity.hashedId = HASH(\\"MD5\\", recent.entity.id),
 entity.type = COALESCE(entity.type, \\"Host\\")
  | RENAME
    recent.entity.id AS entity.id,
    recent.entity.EngineMetadata.UntypedId AS entity.EngineMetadata.UntypedId
  | KEEP entity.name,
 host.entity.id,
 host.name,
 host.domain,
 host.hostname,
 host.id,
 host.os.name,
 host.os.type,
 host.ip,
 host.mac,
 host.type,
 host.architecture,
 host.boot.id,
 host.cpu.usage,
 host.disk.read.bytes,
 host.disk.write.bytes,
 host.network.egress.bytes,
 host.network.egress.packets,
 host.network.ingress.bytes,
 host.network.ingress.packets,
 host.pid_ns_ino,
 host.uptime,
 host.os.family,
 host.os.full,
 host.os.kernel,
 host.os.platform,
 host.os.version,
 host.geo.city_name,
 host.geo.continent_code,
 host.geo.continent_name,
 host.geo.country_iso_code,
 host.geo.country_name,
 host.geo.name,
 host.geo.postal_code,
 host.geo.region_iso_code,
 host.geo.region_name,
 host.geo.timezone,
 entity.source,
 asset.id,
 asset.name,
 asset.owner,
 asset.serial_number,
 asset.model,
 asset.vendor,
 asset.environment,
 asset.criticality,
 asset.business_unit,
 entity.type,
 entity.sub_type,
 entity.url,
 entity.attributes.watchlists,
 entity.attributes.asset,
 entity.attributes.managed,
 entity.attributes.mfa_enabled,
 entity.lifecycle.first_seen,
 entity.lifecycle.last_activity,
 entity.behaviors.rule_names,
 entity.behaviors.anomaly_job_ids,
 entity.relationships.communicates_with,
 entity.relationships.depends_on,
 entity.relationships.owns_inferred,
 entity.relationships.accesses_infrequently,
 entity.relationships.resolution.resolved_to,
 entity.relationships.resolution.risk.calculated_level,
 entity.relationships.resolution.risk.calculated_score,
 entity.relationships.resolution.risk.calculated_score_norm,
 @timestamp,
 entity.id,
 entity.name,
 entity.EngineMetadata.UntypedId,
 entity.hashedId,
 entity.EngineMetadata.Type,
 entity.EngineMetadata.FirstSeenLogInPage"
`;

exports[`buildLogsExtractionEsqlQuery generates the expected query for host with pagination 1`] = `
"FROM test-index-*
    METADATA _index
  | WHERE ((host.entity.id IS NOT NULL AND host.entity.id != \\"\\") OR (host.id IS NOT NULL AND host.id != \\"\\") OR (host.name IS NOT NULL AND host.name != \\"\\") OR (host.hostname IS NOT NULL AND host.hostname != \\"\\"))
      AND @timestamp > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
  | EVAL recent.entity.EngineMetadata.UntypedId = CASE((host.entity.id IS NOT NULL AND host.entity.id != \\"\\"), host.entity.id,
(host.id IS NOT NULL AND host.id != \\"\\"), host.id,
(host.name IS NOT NULL AND host.name != \\"\\" AND host.domain IS NOT NULL AND host.domain != \\"\\"), CONCAT(host.name, \\".\\", host.domain),
(host.hostname IS NOT NULL AND host.hostname != \\"\\" AND host.domain IS NOT NULL AND host.domain != \\"\\"), CONCAT(host.hostname, \\".\\", host.domain),
(host.name IS NOT NULL AND host.name != \\"\\"), host.name,
(host.hostname IS NOT NULL AND host.hostname != \\"\\"), host.hostname, NULL)
  | STATS
    entity.EngineMetadata.FirstSeenLogInPage = MIN(@timestamp),
    recent.timestamp = MAX(@timestamp),
    recent.entity.name = LAST(TO_STRING(host.name), @timestamp) WHERE host.name IS NOT NULL,
 recent.host.entity.id = FIRST(TO_STRING(host.entity.id), @timestamp) WHERE host.entity.id IS NOT NULL,
 recent.host.name = TOP(MV_DEDUPE(TO_STRING(host.name)), 10) WHERE host.name IS NOT NULL,
 recent.host.domain = TOP(MV_DEDUPE(TO_STRING(host.domain)), 10) WHERE host.domain IS NOT NULL,
 recent.host.hostname = TOP(MV_DEDUPE(TO_STRING(host.hostname)), 10) WHERE host.hostname IS NOT NULL,
 recent.host.id = TOP(MV_DEDUPE(TO_STRING(host.id)), 10) WHERE host.id IS NOT NULL,
 recent.host.os.name = TOP(MV_DEDUPE(TO_STRING(host.os.name)), 10) WHERE host.os.name IS NOT NULL,
 recent.host.os.type = TOP(MV_DEDUPE(TO_STRING(host.os.type)), 10) WHERE host.os.type IS NOT NULL,
 recent.host.ip = TOP(MV_DEDUPE(TO_IP(host.ip)), 10) WHERE host.ip IS NOT NULL,
 recent.host.mac = TOP(MV_DEDUPE(TO_STRING(host.mac)), 10) WHERE host.mac IS NOT NULL,
 recent.host.type = TOP(MV_DEDUPE(TO_STRING(host.type)), 10) WHERE host.type IS NOT NULL,
 recent.host.architecture = TOP(MV_DEDUPE(TO_STRING(host.architecture)), 10) WHERE host.architecture IS NOT NULL,
 recent.host.boot.id = TOP(MV_DEDUPE(TO_STRING(host.boot.id)), 10) WHERE host.boot.id IS NOT NULL,
 recent.host.cpu.usage = LAST(host.cpu.usage, @timestamp) WHERE host.cpu.usage IS NOT NULL,
 recent.host.disk.read.bytes = TOP(MV_DEDUPE(TO_LONG(host.disk.read.bytes)), 10) WHERE host.disk.read.bytes IS NOT NULL,
 recent.host.disk.write.bytes = TOP(MV_DEDUPE(TO_LONG(host.disk.write.bytes)), 10) WHERE host.disk.write.bytes IS NOT NULL,
 recent.host.network.egress.bytes = TOP(MV_DEDUPE(TO_LONG(host.network.egress.bytes)), 10) WHERE host.network.egress.bytes IS NOT NULL,
 recent.host.network.egress.packets = TOP(MV_DEDUPE(TO_LONG(host.network.egress.packets)), 10) WHERE host.network.egress.packets IS NOT NULL,
 recent.host.network.ingress.bytes = TOP(MV_DEDUPE(TO_LONG(host.network.ingress.bytes)), 10) WHERE host.network.ingress.bytes IS NOT NULL,
 recent.host.network.ingress.packets = TOP(MV_DEDUPE(TO_LONG(host.network.ingress.packets)), 10) WHERE host.network.ingress.packets IS NOT NULL,
 recent.host.pid_ns_ino = TOP(MV_DEDUPE(TO_STRING(host.pid_ns_ino)), 10) WHERE host.pid_ns_ino IS NOT NULL,
 recent.host.uptime = TOP(MV_DEDUPE(TO_LONG(host.uptime)), 10) WHERE host.uptime IS NOT NULL,
 recent.host.os.family = TOP(MV_DEDUPE(TO_STRING(host.os.family)), 10) WHERE host.os.family IS NOT NULL,
 recent.host.os.full = TOP(MV_DEDUPE(TO_STRING(host.os.full)), 10) WHERE host.os.full IS NOT NULL,
 recent.host.os.kernel = TOP(MV_DEDUPE(TO_STRING(host.os.kernel)), 10) WHERE host.os.kernel IS NOT NULL,
 recent.host.os.platform = TOP(MV_DEDUPE(TO_STRING(host.os.platform)), 10) WHERE host.os.platform IS NOT NULL,
 recent.host.os.version = TOP(MV_DEDUPE(TO_STRING(host.os.version)), 10) WHERE host.os.version IS NOT NULL,
 recent.host.geo.city_name = TOP(MV_DEDUPE(TO_STRING(host.geo.city_name)), 10) WHERE host.geo.city_name IS NOT NULL,
 recent.host.geo.continent_code = TOP(MV_DEDUPE(TO_STRING(host.geo.continent_code)), 10) WHERE host.geo.continent_code IS NOT NULL,
 recent.host.geo.continent_name = TOP(MV_DEDUPE(TO_STRING(host.geo.continent_name)), 10) WHERE host.geo.continent_name IS NOT NULL,
 recent.host.geo.country_iso_code = TOP(MV_DEDUPE(TO_STRING(host.geo.country_iso_code)), 10) WHERE host.geo.country_iso_code IS NOT NULL,
 recent.host.geo.country_name = TOP(MV_DEDUPE(TO_STRING(host.geo.country_name)), 10) WHERE host.geo.country_name IS NOT NULL,
 recent.host.geo.name = TOP(MV_DEDUPE(TO_STRING(host.geo.name)), 10) WHERE host.geo.name IS NOT NULL,
 recent.host.geo.postal_code = TOP(MV_DEDUPE(TO_STRING(host.geo.postal_code)), 10) WHERE host.geo.postal_code IS NOT NULL,
 recent.host.geo.region_iso_code = TOP(MV_DEDUPE(TO_STRING(host.geo.region_iso_code)), 10) WHERE host.geo.region_iso_code IS NOT NULL,
 recent.host.geo.region_name = TOP(MV_DEDUPE(TO_STRING(host.geo.region_name)), 10) WHERE host.geo.region_name IS NOT NULL,
 recent.host.geo.timezone = TOP(MV_DEDUPE(TO_STRING(host.geo.timezone)), 10) WHERE host.geo.timezone IS NOT NULL,
 recent.entity.source = TOP(MV_DEDUPE(TO_STRING(event.dataset)), 50) WHERE event.dataset IS NOT NULL,
 recent.asset.id = LAST(TO_STRING(asset.id), @timestamp) WHERE asset.id IS NOT NULL,
 recent.asset.name = LAST(TO_STRING(asset.name), @timestamp) WHERE asset.name IS NOT NULL,
 recent.asset.owner = LAST(TO_STRING(asset.owner), @timestamp) WHERE asset.owner IS NOT NULL,
 recent.asset.serial_number = LAST(TO_STRING(asset.serial_number), @timestamp) WHERE asset.serial_number IS NOT NULL,
 recent.asset.model = LAST(TO_STRING(asset.model), @timestamp) WHERE asset.model IS NOT NULL,
 recent.asset.vendor = LAST(TO_STRING(asset.vendor), @timestamp) WHERE asset.vendor IS NOT NULL,
 recent.asset.environment = LAST(TO_STRING(asset.environment), @timestamp) WHERE asset.environment IS NOT NULL,
 recent.asset.criticality = LAST(TO_STRING(asset.criticality), @timestamp) WHERE asset.criticality IS NOT NULL,
 recent.asset.business_unit = LAST(TO_STRING(asset.business_unit), @timestamp) WHERE asset.business_unit IS NOT NULL,
 recent.entity.type = LAST(TO_STRING(host.entity.type), @timestamp) WHERE host.entity.type IS NOT NULL,
 recent.entity.sub_type = LAST(TO_STRING(host.entity.sub_type), @timestamp) WHERE host.entity.sub_type IS NOT NULL,
 recent.entity.url = LAST(TO_STRING(host.entity.url), @timestamp) WHERE host.entity.url IS NOT NULL,
 recent.entity.attributes.watchlists = LAST(TO_STRING(host.entity.attributes.watchlists), @timestamp) WHERE host.entity.attributes.watchlists IS NOT NULL,
 recent.entity.attributes.asset = LAST(TO_BOOLEAN(host.entity.attributes.asset), @timestamp) WHERE host.entity.attributes.asset IS NOT NULL,
 recent.entity.attributes.managed = LAST(TO_BOOLEAN(host.entity.attributes.managed), @timestamp) WHERE host.entity.attributes.managed IS NOT NULL,
 recent.entity.attributes.mfa_enabled = LAST(TO_BOOLEAN(host.entity.attributes.mfa_enabled), @timestamp) WHERE host.entity.attributes.mfa_enabled IS NOT NULL,
 recent.entity.lifecycle.first_seen = LAST(TO_DATETIME(host.entity.lifecycle.first_seen), @timestamp) WHERE host.entity.lifecycle.first_seen IS NOT NULL,
 recent.entity.lifecycle.last_activity = LAST(TO_DATETIME(host.entity.lifecycle.last_activity), @timestamp) WHERE host.entity.lifecycle.last_activity IS NOT NULL,
 recent.entity.behaviors.rule_names = TOP(MV_DEDUPE(TO_STRING(host.entity.behaviors.rule_names)), 100) WHERE host.entity.behaviors.rule_names IS NOT NULL,
 recent.entity.behaviors.anomaly_job_ids = TOP(MV_DEDUPE(TO_STRING(host.entity.behaviors.anomaly_job_ids)), 100) WHERE host.entity.behaviors.anomaly_job_ids IS NOT NULL,
 recent.entity.relationships.communicates_with = TOP(MV_DEDUPE(TO_STRING(host.entity.relationships.Communicates_with)), 10) WHERE host.entity.relationships.Communicates_with IS NOT NULL,
 recent.entity.relationships.depends_on = TOP(MV_DEDUPE(TO_STRING(host.entity.relationships.Depends_on)), 10) WHERE host.entity.relationships.Depends_on IS NOT NULL,
 recent.entity.relationships.owns_inferred = LAST(TO_STRING(entity.relationships.owns_inferred), @timestamp) WHERE entity.relationships.owns_inferred IS NOT NULL,
 recent.entity.relationships.accesses_infrequently = LAST(TO_STRING(entity.relationships.accesses_infrequently), @timestamp) WHERE entity.relationships.accesses_infrequently IS NOT NULL,
 recent.entity.relationships.resolution.resolved_to = LAST(TO_STRING(entity.relationships.resolution.resolved_to), @timestamp) WHERE entity.relationships.resolution.resolved_to IS NOT NULL,
 recent.entity.relationships.resolution.risk.calculated_level = LAST(TO_STRING(entity.relationships.resolution.risk.calculated_level), @timestamp) WHERE entity.relationships.resolution.risk.calculated_level IS NOT NULL,
 recent.entity.relationships.resolution.risk.calculated_score = LAST(TO_DOUBLE(entity.relationships.resolution.risk.calculated_score), @timestamp) WHERE entity.relationships.resolution.risk.calculated_score IS NOT NULL,
 recent.entity.relationships.resolution.risk.calculated_score_norm = LAST(TO_DOUBLE(entity.relationships.resolution.risk.calculated_score_norm), @timestamp) WHERE entity.relationships.resolution.risk.calculated_score_norm IS NOT NULL
    BY recent.entity.EngineMetadata.UntypedId
  | SORT entity.EngineMetadata.FirstSeenLogInPage ASC, recent.entity.EngineMetadata.UntypedId ASC
  | WHERE entity.EngineMetadata.FirstSeenLogInPage > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\") 
            OR (entity.EngineMetadata.FirstSeenLogInPage == TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\") 
                AND recent.entity.EngineMetadata.UntypedId > \\"123\\")
  | LIMIT 10000
  | EVAL recent.entity.id = CONCAT(\\"host:\\", recent.entity.EngineMetadata.UntypedId)
  | LOOKUP JOIN latest-index
      ON recent.entity.id == entity.id
  | EVAL entity.name = COALESCE(recent.entity.name, entity.name),
 host.entity.id = COALESCE(host.entity.id, recent.host.entity.id),
 host.name = MV_SLICE(MV_UNION(recent.host.name, host.name), 0, 9),
 host.domain = MV_SLICE(MV_UNION(recent.host.domain, host.domain), 0, 9),
 host.hostname = MV_SLICE(MV_UNION(recent.host.hostname, host.hostname), 0, 9),
 host.id = MV_SLICE(MV_UNION(recent.host.id, host.id), 0, 9),
 host.os.name = MV_SLICE(MV_UNION(recent.host.os.name, host.os.name), 0, 9),
 host.os.type = MV_SLICE(MV_UNION(recent.host.os.type, host.os.type), 0, 9),
 host.ip = MV_SLICE(MV_UNION(recent.host.ip, host.ip), 0, 9),
 host.mac = MV_SLICE(MV_UNION(recent.host.mac, host.mac), 0, 9),
 host.type = MV_SLICE(MV_UNION(recent.host.type, host.type), 0, 9),
 host.architecture = MV_SLICE(MV_UNION(recent.host.architecture, host.architecture), 0, 9),
 host.boot.id = MV_SLICE(MV_UNION(recent.host.boot.id, host.boot.id), 0, 9),
 host.cpu.usage = COALESCE(recent.host.cpu.usage, host.cpu.usage),
 host.disk.read.bytes = MV_SLICE(MV_UNION(recent.host.disk.read.bytes, host.disk.read.bytes), 0, 9),
 host.disk.write.bytes = MV_SLICE(MV_UNION(recent.host.disk.write.bytes, host.disk.write.bytes), 0, 9),
 host.network.egress.bytes = MV_SLICE(MV_UNION(recent.host.network.egress.bytes, host.network.egress.bytes), 0, 9),
 host.network.egress.packets = MV_SLICE(MV_UNION(recent.host.network.egress.packets, host.network.egress.packets), 0, 9),
 host.network.ingress.bytes = MV_SLICE(MV_UNION(recent.host.network.ingress.bytes, host.network.ingress.bytes), 0, 9),
 host.network.ingress.packets = MV_SLICE(MV_UNION(recent.host.network.ingress.packets, host.network.ingress.packets), 0, 9),
 host.pid_ns_ino = MV_SLICE(MV_UNION(recent.host.pid_ns_ino, host.pid_ns_ino), 0, 9),
 host.uptime = MV_SLICE(MV_UNION(recent.host.uptime, host.uptime), 0, 9),
 host.os.family = MV_SLICE(MV_UNION(recent.host.os.family, host.os.family), 0, 9),
 host.os.full = MV_SLICE(MV_UNION(recent.host.os.full, host.os.full), 0, 9),
 host.os.kernel = MV_SLICE(MV_UNION(recent.host.os.kernel, host.os.kernel), 0, 9),
 host.os.platform = MV_SLICE(MV_UNION(recent.host.os.platform, host.os.platform), 0, 9),
 host.os.version = MV_SLICE(MV_UNION(recent.host.os.version, host.os.version), 0, 9),
 host.geo.city_name = MV_SLICE(MV_UNION(recent.host.geo.city_name, host.geo.city_name), 0, 9),
 host.geo.continent_code = MV_SLICE(MV_UNION(recent.host.geo.continent_code, host.geo.continent_code), 0, 9),
 host.geo.continent_name = MV_SLICE(MV_UNION(recent.host.geo.continent_name, host.geo.continent_name), 0, 9),
 host.geo.country_iso_code = MV_SLICE(MV_UNION(recent.host.geo.country_iso_code, host.geo.country_iso_code), 0, 9),
 host.geo.country_name = MV_SLICE(MV_UNION(recent.host.geo.country_name, host.geo.country_name), 0, 9),
 host.geo.name = MV_SLICE(MV_UNION(recent.host.geo.name, host.geo.name), 0, 9),
 host.geo.postal_code = MV_SLICE(MV_UNION(recent.host.geo.postal_code, host.geo.postal_code), 0, 9),
 host.geo.region_iso_code = MV_SLICE(MV_UNION(recent.host.geo.region_iso_code, host.geo.region_iso_code), 0, 9),
 host.geo.region_name = MV_SLICE(MV_UNION(recent.host.geo.region_name, host.geo.region_name), 0, 9),
 host.geo.timezone = MV_SLICE(MV_UNION(recent.host.geo.timezone, host.geo.timezone), 0, 9),
 entity.source = MV_SLICE(MV_UNION(recent.entity.source, entity.source), 0, 49),
 asset.id = COALESCE(recent.asset.id, asset.id),
 asset.name = COALESCE(recent.asset.name, asset.name),
 asset.owner = COALESCE(recent.asset.owner, asset.owner),
 asset.serial_number = COALESCE(recent.asset.serial_number, asset.serial_number),
 asset.model = COALESCE(recent.asset.model, asset.model),
 asset.vendor = COALESCE(recent.asset.vendor, asset.vendor),
 asset.environment = COALESCE(recent.asset.environment, asset.environment),
 asset.criticality = COALESCE(recent.asset.criticality, asset.criticality),
 asset.business_unit = COALESCE(recent.asset.business_unit, asset.business_unit),
 entity.type = COALESCE(recent.entity.type, entity.type),
 entity.sub_type = COALESCE(recent.entity.sub_type, entity.sub_type),
 entity.url = COALESCE(recent.entity.url, entity.url),
 entity.attributes.watchlists = COALESCE(recent.entity.attributes.watchlists, entity.attributes.watchlists),
 entity.attributes.asset = COALESCE(recent.entity.attributes.asset, entity.attributes.asset),
 entity.attributes.managed = COALESCE(recent.entity.attributes.managed, entity.attributes.managed),
 entity.attributes.mfa_enabled = COALESCE(recent.entity.attributes.mfa_enabled, entity.attributes.mfa_enabled),
 entity.lifecycle.first_seen = COALESCE(recent.entity.lifecycle.first_seen, entity.lifecycle.first_seen),
 entity.lifecycle.last_activity = COALESCE(recent.entity.lifecycle.last_activity, entity.lifecycle.last_activity),
 entity.behaviors.rule_names = MV_SLICE(MV_UNION(recent.entity.behaviors.rule_names, entity.behaviors.rule_names), 0, 99),
 entity.behaviors.anomaly_job_ids = MV_SLICE(MV_UNION(recent.entity.behaviors.anomaly_job_ids, entity.behaviors.anomaly_job_ids), 0, 99),
 entity.relationships.communicates_with = MV_SLICE(MV_UNION(recent.entity.relationships.communicates_with, entity.relationships.communicates_with), 0, 9),
 entity.relationships.depends_on = MV_SLICE(MV_UNION(recent.entity.relationships.depends_on, entity.relationships.depends_on), 0, 9),
 entity.relationships.owns_inferred = COALESCE(recent.entity.relationships.owns_inferred, entity.relationships.owns_inferred),
 entity.relationships.accesses_infrequently = COALESCE(recent.entity.relationships.accesses_infrequently, entity.relationships.accesses_infrequently),
 entity.relationships.resolution.resolved_to = COALESCE(recent.entity.relationships.resolution.resolved_to, entity.relationships.resolution.resolved_to),
 entity.relationships.resolution.risk.calculated_level = COALESCE(recent.entity.relationships.resolution.risk.calculated_level, entity.relationships.resolution.risk.calculated_level),
 entity.relationships.resolution.risk.calculated_score = COALESCE(recent.entity.relationships.resolution.risk.calculated_score, entity.relationships.resolution.risk.calculated_score),
 entity.relationships.resolution.risk.calculated_score_norm = COALESCE(recent.entity.relationships.resolution.risk.calculated_score_norm, entity.relationships.resolution.risk.calculated_score_norm)
  | EVAL @timestamp = recent.timestamp,
 entity.name = CASE(entity.name IS NOT NULL AND entity.name != \\"\\", entity.name, recent.entity.EngineMetadata.UntypedId),
 entity.EngineMetadata.Type = \\"host\\",
 entity.hashedId = HASH(\\"MD5\\", recent.entity.id),
 entity.type = COALESCE(entity.type, \\"Host\\")
  | RENAME
    recent.entity.id AS entity.id,
    recent.entity.EngineMetadata.UntypedId AS entity.EngineMetadata.UntypedId
  | KEEP entity.name,
 host.entity.id,
 host.name,
 host.domain,
 host.hostname,
 host.id,
 host.os.name,
 host.os.type,
 host.ip,
 host.mac,
 host.type,
 host.architecture,
 host.boot.id,
 host.cpu.usage,
 host.disk.read.bytes,
 host.disk.write.bytes,
 host.network.egress.bytes,
 host.network.egress.packets,
 host.network.ingress.bytes,
 host.network.ingress.packets,
 host.pid_ns_ino,
 host.uptime,
 host.os.family,
 host.os.full,
 host.os.kernel,
 host.os.platform,
 host.os.version,
 host.geo.city_name,
 host.geo.continent_code,
 host.geo.continent_name,
 host.geo.country_iso_code,
 host.geo.country_name,
 host.geo.name,
 host.geo.postal_code,
 host.geo.region_iso_code,
 host.geo.region_name,
 host.geo.timezone,
 entity.source,
 asset.id,
 asset.name,
 asset.owner,
 asset.serial_number,
 asset.model,
 asset.vendor,
 asset.environment,
 asset.criticality,
 asset.business_unit,
 entity.type,
 entity.sub_type,
 entity.url,
 entity.attributes.watchlists,
 entity.attributes.asset,
 entity.attributes.managed,
 entity.attributes.mfa_enabled,
 entity.lifecycle.first_seen,
 entity.lifecycle.last_activity,
 entity.behaviors.rule_names,
 entity.behaviors.anomaly_job_ids,
 entity.relationships.communicates_with,
 entity.relationships.depends_on,
 entity.relationships.owns_inferred,
 entity.relationships.accesses_infrequently,
 entity.relationships.resolution.resolved_to,
 entity.relationships.resolution.risk.calculated_level,
 entity.relationships.resolution.risk.calculated_score,
 entity.relationships.resolution.risk.calculated_score_norm,
 @timestamp,
 entity.id,
 entity.name,
 entity.EngineMetadata.UntypedId,
 entity.hashedId,
 entity.EngineMetadata.Type,
 entity.EngineMetadata.FirstSeenLogInPage"
`;

exports[`buildLogsExtractionEsqlQuery generates the expected query for host with recoveryId 1`] = `
"FROM test-index-*
    METADATA _index
  | WHERE ((host.entity.id IS NOT NULL AND host.entity.id != \\"\\") OR (host.id IS NOT NULL AND host.id != \\"\\") OR (host.name IS NOT NULL AND host.name != \\"\\") OR (host.hostname IS NOT NULL AND host.hostname != \\"\\"))
      AND @timestamp >= TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
  | EVAL recent.entity.EngineMetadata.UntypedId = CASE((host.entity.id IS NOT NULL AND host.entity.id != \\"\\"), host.entity.id,
(host.id IS NOT NULL AND host.id != \\"\\"), host.id,
(host.name IS NOT NULL AND host.name != \\"\\" AND host.domain IS NOT NULL AND host.domain != \\"\\"), CONCAT(host.name, \\".\\", host.domain),
(host.hostname IS NOT NULL AND host.hostname != \\"\\" AND host.domain IS NOT NULL AND host.domain != \\"\\"), CONCAT(host.hostname, \\".\\", host.domain),
(host.name IS NOT NULL AND host.name != \\"\\"), host.name,
(host.hostname IS NOT NULL AND host.hostname != \\"\\"), host.hostname, NULL)
  | STATS
    entity.EngineMetadata.FirstSeenLogInPage = MIN(@timestamp),
    recent.timestamp = MAX(@timestamp),
    recent.entity.name = LAST(TO_STRING(host.name), @timestamp) WHERE host.name IS NOT NULL,
 recent.host.entity.id = FIRST(TO_STRING(host.entity.id), @timestamp) WHERE host.entity.id IS NOT NULL,
 recent.host.name = TOP(MV_DEDUPE(TO_STRING(host.name)), 10) WHERE host.name IS NOT NULL,
 recent.host.domain = TOP(MV_DEDUPE(TO_STRING(host.domain)), 10) WHERE host.domain IS NOT NULL,
 recent.host.hostname = TOP(MV_DEDUPE(TO_STRING(host.hostname)), 10) WHERE host.hostname IS NOT NULL,
 recent.host.id = TOP(MV_DEDUPE(TO_STRING(host.id)), 10) WHERE host.id IS NOT NULL,
 recent.host.os.name = TOP(MV_DEDUPE(TO_STRING(host.os.name)), 10) WHERE host.os.name IS NOT NULL,
 recent.host.os.type = TOP(MV_DEDUPE(TO_STRING(host.os.type)), 10) WHERE host.os.type IS NOT NULL,
 recent.host.ip = TOP(MV_DEDUPE(TO_IP(host.ip)), 10) WHERE host.ip IS NOT NULL,
 recent.host.mac = TOP(MV_DEDUPE(TO_STRING(host.mac)), 10) WHERE host.mac IS NOT NULL,
 recent.host.type = TOP(MV_DEDUPE(TO_STRING(host.type)), 10) WHERE host.type IS NOT NULL,
 recent.host.architecture = TOP(MV_DEDUPE(TO_STRING(host.architecture)), 10) WHERE host.architecture IS NOT NULL,
 recent.host.boot.id = TOP(MV_DEDUPE(TO_STRING(host.boot.id)), 10) WHERE host.boot.id IS NOT NULL,
 recent.host.cpu.usage = LAST(host.cpu.usage, @timestamp) WHERE host.cpu.usage IS NOT NULL,
 recent.host.disk.read.bytes = TOP(MV_DEDUPE(TO_LONG(host.disk.read.bytes)), 10) WHERE host.disk.read.bytes IS NOT NULL,
 recent.host.disk.write.bytes = TOP(MV_DEDUPE(TO_LONG(host.disk.write.bytes)), 10) WHERE host.disk.write.bytes IS NOT NULL,
 recent.host.network.egress.bytes = TOP(MV_DEDUPE(TO_LONG(host.network.egress.bytes)), 10) WHERE host.network.egress.bytes IS NOT NULL,
 recent.host.network.egress.packets = TOP(MV_DEDUPE(TO_LONG(host.network.egress.packets)), 10) WHERE host.network.egress.packets IS NOT NULL,
 recent.host.network.ingress.bytes = TOP(MV_DEDUPE(TO_LONG(host.network.ingress.bytes)), 10) WHERE host.network.ingress.bytes IS NOT NULL,
 recent.host.network.ingress.packets = TOP(MV_DEDUPE(TO_LONG(host.network.ingress.packets)), 10) WHERE host.network.ingress.packets IS NOT NULL,
 recent.host.pid_ns_ino = TOP(MV_DEDUPE(TO_STRING(host.pid_ns_ino)), 10) WHERE host.pid_ns_ino IS NOT NULL,
 recent.host.uptime = TOP(MV_DEDUPE(TO_LONG(host.uptime)), 10) WHERE host.uptime IS NOT NULL,
 recent.host.os.family = TOP(MV_DEDUPE(TO_STRING(host.os.family)), 10) WHERE host.os.family IS NOT NULL,
 recent.host.os.full = TOP(MV_DEDUPE(TO_STRING(host.os.full)), 10) WHERE host.os.full IS NOT NULL,
 recent.host.os.kernel = TOP(MV_DEDUPE(TO_STRING(host.os.kernel)), 10) WHERE host.os.kernel IS NOT NULL,
 recent.host.os.platform = TOP(MV_DEDUPE(TO_STRING(host.os.platform)), 10) WHERE host.os.platform IS NOT NULL,
 recent.host.os.version = TOP(MV_DEDUPE(TO_STRING(host.os.version)), 10) WHERE host.os.version IS NOT NULL,
 recent.host.geo.city_name = TOP(MV_DEDUPE(TO_STRING(host.geo.city_name)), 10) WHERE host.geo.city_name IS NOT NULL,
 recent.host.geo.continent_code = TOP(MV_DEDUPE(TO_STRING(host.geo.continent_code)), 10) WHERE host.geo.continent_code IS NOT NULL,
 recent.host.geo.continent_name = TOP(MV_DEDUPE(TO_STRING(host.geo.continent_name)), 10) WHERE host.geo.continent_name IS NOT NULL,
 recent.host.geo.country_iso_code = TOP(MV_DEDUPE(TO_STRING(host.geo.country_iso_code)), 10) WHERE host.geo.country_iso_code IS NOT NULL,
 recent.host.geo.country_name = TOP(MV_DEDUPE(TO_STRING(host.geo.country_name)), 10) WHERE host.geo.country_name IS NOT NULL,
 recent.host.geo.name = TOP(MV_DEDUPE(TO_STRING(host.geo.name)), 10) WHERE host.geo.name IS NOT NULL,
 recent.host.geo.postal_code = TOP(MV_DEDUPE(TO_STRING(host.geo.postal_code)), 10) WHERE host.geo.postal_code IS NOT NULL,
 recent.host.geo.region_iso_code = TOP(MV_DEDUPE(TO_STRING(host.geo.region_iso_code)), 10) WHERE host.geo.region_iso_code IS NOT NULL,
 recent.host.geo.region_name = TOP(MV_DEDUPE(TO_STRING(host.geo.region_name)), 10) WHERE host.geo.region_name IS NOT NULL,
 recent.host.geo.timezone = TOP(MV_DEDUPE(TO_STRING(host.geo.timezone)), 10) WHERE host.geo.timezone IS NOT NULL,
 recent.entity.source = TOP(MV_DEDUPE(TO_STRING(event.dataset)), 50) WHERE event.dataset IS NOT NULL,
 recent.asset.id = LAST(TO_STRING(asset.id), @timestamp) WHERE asset.id IS NOT NULL,
 recent.asset.name = LAST(TO_STRING(asset.name), @timestamp) WHERE asset.name IS NOT NULL,
 recent.asset.owner = LAST(TO_STRING(asset.owner), @timestamp) WHERE asset.owner IS NOT NULL,
 recent.asset.serial_number = LAST(TO_STRING(asset.serial_number), @timestamp) WHERE asset.serial_number IS NOT NULL,
 recent.asset.model = LAST(TO_STRING(asset.model), @timestamp) WHERE asset.model IS NOT NULL,
 recent.asset.vendor = LAST(TO_STRING(asset.vendor), @timestamp) WHERE asset.vendor IS NOT NULL,
 recent.asset.environment = LAST(TO_STRING(asset.environment), @timestamp) WHERE asset.environment IS NOT NULL,
 recent.asset.criticality = LAST(TO_STRING(asset.criticality), @timestamp) WHERE asset.criticality IS NOT NULL,
 recent.asset.business_unit = LAST(TO_STRING(asset.business_unit), @timestamp) WHERE asset.business_unit IS NOT NULL,
 recent.entity.type = LAST(TO_STRING(host.entity.type), @timestamp) WHERE host.entity.type IS NOT NULL,
 recent.entity.sub_type = LAST(TO_STRING(host.entity.sub_type), @timestamp) WHERE host.entity.sub_type IS NOT NULL,
 recent.entity.url = LAST(TO_STRING(host.entity.url), @timestamp) WHERE host.entity.url IS NOT NULL,
 recent.entity.attributes.watchlists = LAST(TO_STRING(host.entity.attributes.watchlists), @timestamp) WHERE host.entity.attributes.watchlists IS NOT NULL,
 recent.entity.attributes.asset = LAST(TO_BOOLEAN(host.entity.attributes.asset), @timestamp) WHERE host.entity.attributes.asset IS NOT NULL,
 recent.entity.attributes.managed = LAST(TO_BOOLEAN(host.entity.attributes.managed), @timestamp) WHERE host.entity.attributes.managed IS NOT NULL,
 recent.entity.attributes.mfa_enabled = LAST(TO_BOOLEAN(host.entity.attributes.mfa_enabled), @timestamp) WHERE host.entity.attributes.mfa_enabled IS NOT NULL,
 recent.entity.lifecycle.first_seen = LAST(TO_DATETIME(host.entity.lifecycle.first_seen), @timestamp) WHERE host.entity.lifecycle.first_seen IS NOT NULL,
 recent.entity.lifecycle.last_activity = LAST(TO_DATETIME(host.entity.lifecycle.last_activity), @timestamp) WHERE host.entity.lifecycle.last_activity IS NOT NULL,
 recent.entity.behaviors.rule_names = TOP(MV_DEDUPE(TO_STRING(host.entity.behaviors.rule_names)), 100) WHERE host.entity.behaviors.rule_names IS NOT NULL,
 recent.entity.behaviors.anomaly_job_ids = TOP(MV_DEDUPE(TO_STRING(host.entity.behaviors.anomaly_job_ids)), 100) WHERE host.entity.behaviors.anomaly_job_ids IS NOT NULL,
 recent.entity.relationships.communicates_with = TOP(MV_DEDUPE(TO_STRING(host.entity.relationships.Communicates_with)), 10) WHERE host.entity.relationships.Communicates_with IS NOT NULL,
 recent.entity.relationships.depends_on = TOP(MV_DEDUPE(TO_STRING(host.entity.relationships.Depends_on)), 10) WHERE host.entity.relationships.Depends_on IS NOT NULL,
 recent.entity.relationships.owns_inferred = LAST(TO_STRING(entity.relationships.owns_inferred), @timestamp) WHERE entity.relationships.owns_inferred IS NOT NULL,
 recent.entity.relationships.accesses_infrequently = LAST(TO_STRING(entity.relationships.accesses_infrequently), @timestamp) WHERE entity.relationships.accesses_infrequently IS NOT NULL,
 recent.entity.relationships.resolution.resolved_to = LAST(TO_STRING(entity.relationships.resolution.resolved_to), @timestamp) WHERE entity.relationships.resolution.resolved_to IS NOT NULL,
 recent.entity.relationships.resolution.risk.calculated_level = LAST(TO_STRING(entity.relationships.resolution.risk.calculated_level), @timestamp) WHERE entity.relationships.resolution.risk.calculated_level IS NOT NULL,
 recent.entity.relationships.resolution.risk.calculated_score = LAST(TO_DOUBLE(entity.relationships.resolution.risk.calculated_score), @timestamp) WHERE entity.relationships.resolution.risk.calculated_score IS NOT NULL,
 recent.entity.relationships.resolution.risk.calculated_score_norm = LAST(TO_DOUBLE(entity.relationships.resolution.risk.calculated_score_norm), @timestamp) WHERE entity.relationships.resolution.risk.calculated_score_norm IS NOT NULL
    BY recent.entity.EngineMetadata.UntypedId
  | SORT entity.EngineMetadata.FirstSeenLogInPage ASC, recent.entity.EngineMetadata.UntypedId ASC
  | WHERE entity.EngineMetadata.FirstSeenLogInPage > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\") 
            OR (entity.EngineMetadata.FirstSeenLogInPage == TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\") 
                AND recent.entity.EngineMetadata.UntypedId > \\"recover\\")
  | LIMIT 10000
  | EVAL recent.entity.id = CONCAT(\\"host:\\", recent.entity.EngineMetadata.UntypedId)
  | LOOKUP JOIN latest-index
      ON recent.entity.id == entity.id
  | EVAL entity.name = COALESCE(recent.entity.name, entity.name),
 host.entity.id = COALESCE(host.entity.id, recent.host.entity.id),
 host.name = MV_SLICE(MV_UNION(recent.host.name, host.name), 0, 9),
 host.domain = MV_SLICE(MV_UNION(recent.host.domain, host.domain), 0, 9),
 host.hostname = MV_SLICE(MV_UNION(recent.host.hostname, host.hostname), 0, 9),
 host.id = MV_SLICE(MV_UNION(recent.host.id, host.id), 0, 9),
 host.os.name = MV_SLICE(MV_UNION(recent.host.os.name, host.os.name), 0, 9),
 host.os.type = MV_SLICE(MV_UNION(recent.host.os.type, host.os.type), 0, 9),
 host.ip = MV_SLICE(MV_UNION(recent.host.ip, host.ip), 0, 9),
 host.mac = MV_SLICE(MV_UNION(recent.host.mac, host.mac), 0, 9),
 host.type = MV_SLICE(MV_UNION(recent.host.type, host.type), 0, 9),
 host.architecture = MV_SLICE(MV_UNION(recent.host.architecture, host.architecture), 0, 9),
 host.boot.id = MV_SLICE(MV_UNION(recent.host.boot.id, host.boot.id), 0, 9),
 host.cpu.usage = COALESCE(recent.host.cpu.usage, host.cpu.usage),
 host.disk.read.bytes = MV_SLICE(MV_UNION(recent.host.disk.read.bytes, host.disk.read.bytes), 0, 9),
 host.disk.write.bytes = MV_SLICE(MV_UNION(recent.host.disk.write.bytes, host.disk.write.bytes), 0, 9),
 host.network.egress.bytes = MV_SLICE(MV_UNION(recent.host.network.egress.bytes, host.network.egress.bytes), 0, 9),
 host.network.egress.packets = MV_SLICE(MV_UNION(recent.host.network.egress.packets, host.network.egress.packets), 0, 9),
 host.network.ingress.bytes = MV_SLICE(MV_UNION(recent.host.network.ingress.bytes, host.network.ingress.bytes), 0, 9),
 host.network.ingress.packets = MV_SLICE(MV_UNION(recent.host.network.ingress.packets, host.network.ingress.packets), 0, 9),
 host.pid_ns_ino = MV_SLICE(MV_UNION(recent.host.pid_ns_ino, host.pid_ns_ino), 0, 9),
 host.uptime = MV_SLICE(MV_UNION(recent.host.uptime, host.uptime), 0, 9),
 host.os.family = MV_SLICE(MV_UNION(recent.host.os.family, host.os.family), 0, 9),
 host.os.full = MV_SLICE(MV_UNION(recent.host.os.full, host.os.full), 0, 9),
 host.os.kernel = MV_SLICE(MV_UNION(recent.host.os.kernel, host.os.kernel), 0, 9),
 host.os.platform = MV_SLICE(MV_UNION(recent.host.os.platform, host.os.platform), 0, 9),
 host.os.version = MV_SLICE(MV_UNION(recent.host.os.version, host.os.version), 0, 9),
 host.geo.city_name = MV_SLICE(MV_UNION(recent.host.geo.city_name, host.geo.city_name), 0, 9),
 host.geo.continent_code = MV_SLICE(MV_UNION(recent.host.geo.continent_code, host.geo.continent_code), 0, 9),
 host.geo.continent_name = MV_SLICE(MV_UNION(recent.host.geo.continent_name, host.geo.continent_name), 0, 9),
 host.geo.country_iso_code = MV_SLICE(MV_UNION(recent.host.geo.country_iso_code, host.geo.country_iso_code), 0, 9),
 host.geo.country_name = MV_SLICE(MV_UNION(recent.host.geo.country_name, host.geo.country_name), 0, 9),
 host.geo.name = MV_SLICE(MV_UNION(recent.host.geo.name, host.geo.name), 0, 9),
 host.geo.postal_code = MV_SLICE(MV_UNION(recent.host.geo.postal_code, host.geo.postal_code), 0, 9),
 host.geo.region_iso_code = MV_SLICE(MV_UNION(recent.host.geo.region_iso_code, host.geo.region_iso_code), 0, 9),
 host.geo.region_name = MV_SLICE(MV_UNION(recent.host.geo.region_name, host.geo.region_name), 0, 9),
 host.geo.timezone = MV_SLICE(MV_UNION(recent.host.geo.timezone, host.geo.timezone), 0, 9),
 entity.source = MV_SLICE(MV_UNION(recent.entity.source, entity.source), 0, 49),
 asset.id = COALESCE(recent.asset.id, asset.id),
 asset.name = COALESCE(recent.asset.name, asset.name),
 asset.owner = COALESCE(recent.asset.owner, asset.owner),
 asset.serial_number = COALESCE(recent.asset.serial_number, asset.serial_number),
 asset.model = COALESCE(recent.asset.model, asset.model),
 asset.vendor = COALESCE(recent.asset.vendor, asset.vendor),
 asset.environment = COALESCE(recent.asset.environment, asset.environment),
 asset.criticality = COALESCE(recent.asset.criticality, asset.criticality),
 asset.business_unit = COALESCE(recent.asset.business_unit, asset.business_unit),
 entity.type = COALESCE(recent.entity.type, entity.type),
 entity.sub_type = COALESCE(recent.entity.sub_type, entity.sub_type),
 entity.url = COALESCE(recent.entity.url, entity.url),
 entity.attributes.watchlists = COALESCE(recent.entity.attributes.watchlists, entity.attributes.watchlists),
 entity.attributes.asset = COALESCE(recent.entity.attributes.asset, entity.attributes.asset),
 entity.attributes.managed = COALESCE(recent.entity.attributes.managed, entity.attributes.managed),
 entity.attributes.mfa_enabled = COALESCE(recent.entity.attributes.mfa_enabled, entity.attributes.mfa_enabled),
 entity.lifecycle.first_seen = COALESCE(recent.entity.lifecycle.first_seen, entity.lifecycle.first_seen),
 entity.lifecycle.last_activity = COALESCE(recent.entity.lifecycle.last_activity, entity.lifecycle.last_activity),
 entity.behaviors.rule_names = MV_SLICE(MV_UNION(recent.entity.behaviors.rule_names, entity.behaviors.rule_names), 0, 99),
 entity.behaviors.anomaly_job_ids = MV_SLICE(MV_UNION(recent.entity.behaviors.anomaly_job_ids, entity.behaviors.anomaly_job_ids), 0, 99),
 entity.relationships.communicates_with = MV_SLICE(MV_UNION(recent.entity.relationships.communicates_with, entity.relationships.communicates_with), 0, 9),
 entity.relationships.depends_on = MV_SLICE(MV_UNION(recent.entity.relationships.depends_on, entity.relationships.depends_on), 0, 9),
 entity.relationships.owns_inferred = COALESCE(recent.entity.relationships.owns_inferred, entity.relationships.owns_inferred),
 entity.relationships.accesses_infrequently = COALESCE(recent.entity.relationships.accesses_infrequently, entity.relationships.accesses_infrequently),
 entity.relationships.resolution.resolved_to = COALESCE(recent.entity.relationships.resolution.resolved_to, entity.relationships.resolution.resolved_to),
 entity.relationships.resolution.risk.calculated_level = COALESCE(recent.entity.relationships.resolution.risk.calculated_level, entity.relationships.resolution.risk.calculated_level),
 entity.relationships.resolution.risk.calculated_score = COALESCE(recent.entity.relationships.resolution.risk.calculated_score, entity.relationships.resolution.risk.calculated_score),
 entity.relationships.resolution.risk.calculated_score_norm = COALESCE(recent.entity.relationships.resolution.risk.calculated_score_norm, entity.relationships.resolution.risk.calculated_score_norm)
  | EVAL @timestamp = recent.timestamp,
 entity.name = CASE(entity.name IS NOT NULL AND entity.name != \\"\\", entity.name, recent.entity.EngineMetadata.UntypedId),
 entity.EngineMetadata.Type = \\"host\\",
 entity.hashedId = HASH(\\"MD5\\", recent.entity.id),
 entity.type = COALESCE(entity.type, \\"Host\\")
  | RENAME
    recent.entity.id AS entity.id,
    recent.entity.EngineMetadata.UntypedId AS entity.EngineMetadata.UntypedId
  | KEEP entity.name,
 host.entity.id,
 host.name,
 host.domain,
 host.hostname,
 host.id,
 host.os.name,
 host.os.type,
 host.ip,
 host.mac,
 host.type,
 host.architecture,
 host.boot.id,
 host.cpu.usage,
 host.disk.read.bytes,
 host.disk.write.bytes,
 host.network.egress.bytes,
 host.network.egress.packets,
 host.network.ingress.bytes,
 host.network.ingress.packets,
 host.pid_ns_ino,
 host.uptime,
 host.os.family,
 host.os.full,
 host.os.kernel,
 host.os.platform,
 host.os.version,
 host.geo.city_name,
 host.geo.continent_code,
 host.geo.continent_name,
 host.geo.country_iso_code,
 host.geo.country_name,
 host.geo.name,
 host.geo.postal_code,
 host.geo.region_iso_code,
 host.geo.region_name,
 host.geo.timezone,
 entity.source,
 asset.id,
 asset.name,
 asset.owner,
 asset.serial_number,
 asset.model,
 asset.vendor,
 asset.environment,
 asset.criticality,
 asset.business_unit,
 entity.type,
 entity.sub_type,
 entity.url,
 entity.attributes.watchlists,
 entity.attributes.asset,
 entity.attributes.managed,
 entity.attributes.mfa_enabled,
 entity.lifecycle.first_seen,
 entity.lifecycle.last_activity,
 entity.behaviors.rule_names,
 entity.behaviors.anomaly_job_ids,
 entity.relationships.communicates_with,
 entity.relationships.depends_on,
 entity.relationships.owns_inferred,
 entity.relationships.accesses_infrequently,
 entity.relationships.resolution.resolved_to,
 entity.relationships.resolution.risk.calculated_level,
 entity.relationships.resolution.risk.calculated_score,
 entity.relationships.resolution.risk.calculated_score_norm,
 @timestamp,
 entity.id,
 entity.name,
 entity.EngineMetadata.UntypedId,
 entity.hashedId,
 entity.EngineMetadata.Type,
 entity.EngineMetadata.FirstSeenLogInPage"
`;

exports[`buildLogsExtractionEsqlQuery generates the expected query for service entity description 1`] = `
"FROM test-index-*
    METADATA _index
  | WHERE ((service.entity.id IS NOT NULL AND service.entity.id != \\"\\") OR (service.name IS NOT NULL AND service.name != \\"\\"))
      AND @timestamp > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
  | EVAL recent.entity.EngineMetadata.UntypedId = CASE((service.entity.id IS NOT NULL AND service.entity.id != \\"\\"), service.entity.id,
(service.name IS NOT NULL AND service.name != \\"\\"), service.name, NULL)
  | STATS
    entity.EngineMetadata.FirstSeenLogInPage = MIN(@timestamp),
    recent.timestamp = MAX(@timestamp),
    recent.entity.name = LAST(TO_STRING(service.name), @timestamp) WHERE service.name IS NOT NULL,
 recent.service.entity.id = FIRST(TO_STRING(service.entity.id), @timestamp) WHERE service.entity.id IS NOT NULL,
 recent.service.name = TOP(MV_DEDUPE(TO_STRING(service.name)), 10) WHERE service.name IS NOT NULL,
 recent.service.address = TOP(MV_DEDUPE(TO_STRING(service.address)), 10) WHERE service.address IS NOT NULL,
 recent.service.environment = TOP(MV_DEDUPE(TO_STRING(service.environment)), 10) WHERE service.environment IS NOT NULL,
 recent.service.ephemeral_id = TOP(MV_DEDUPE(TO_STRING(service.ephemeral_id)), 10) WHERE service.ephemeral_id IS NOT NULL,
 recent.service.id = TOP(MV_DEDUPE(TO_STRING(service.id)), 10) WHERE service.id IS NOT NULL,
 recent.service.node.name = TOP(MV_DEDUPE(TO_STRING(service.node.name)), 10) WHERE service.node.name IS NOT NULL,
 recent.service.node.roles = TOP(MV_DEDUPE(TO_STRING(service.node.roles)), 10) WHERE service.node.roles IS NOT NULL,
 recent.service.node.role = TOP(MV_DEDUPE(TO_STRING(service.node.role)), 10) WHERE service.node.role IS NOT NULL,
 recent.service.state = LAST(TO_STRING(service.state), @timestamp) WHERE service.state IS NOT NULL,
 recent.service.type = TOP(MV_DEDUPE(TO_STRING(service.type)), 10) WHERE service.type IS NOT NULL,
 recent.service.version = LAST(TO_STRING(service.version), @timestamp) WHERE service.version IS NOT NULL,
 recent.entity.source = TOP(MV_DEDUPE(TO_STRING(event.dataset)), 50) WHERE event.dataset IS NOT NULL,
 recent.asset.id = LAST(TO_STRING(asset.id), @timestamp) WHERE asset.id IS NOT NULL,
 recent.asset.name = LAST(TO_STRING(asset.name), @timestamp) WHERE asset.name IS NOT NULL,
 recent.asset.owner = LAST(TO_STRING(asset.owner), @timestamp) WHERE asset.owner IS NOT NULL,
 recent.asset.serial_number = LAST(TO_STRING(asset.serial_number), @timestamp) WHERE asset.serial_number IS NOT NULL,
 recent.asset.model = LAST(TO_STRING(asset.model), @timestamp) WHERE asset.model IS NOT NULL,
 recent.asset.vendor = LAST(TO_STRING(asset.vendor), @timestamp) WHERE asset.vendor IS NOT NULL,
 recent.asset.environment = LAST(TO_STRING(asset.environment), @timestamp) WHERE asset.environment IS NOT NULL,
 recent.asset.criticality = LAST(TO_STRING(asset.criticality), @timestamp) WHERE asset.criticality IS NOT NULL,
 recent.asset.business_unit = LAST(TO_STRING(asset.business_unit), @timestamp) WHERE asset.business_unit IS NOT NULL,
 recent.entity.type = LAST(TO_STRING(service.entity.type), @timestamp) WHERE service.entity.type IS NOT NULL,
 recent.entity.sub_type = LAST(TO_STRING(service.entity.sub_type), @timestamp) WHERE service.entity.sub_type IS NOT NULL,
 recent.entity.url = LAST(TO_STRING(service.entity.url), @timestamp) WHERE service.entity.url IS NOT NULL,
 recent.entity.attributes.watchlists = LAST(TO_STRING(service.entity.attributes.watchlists), @timestamp) WHERE service.entity.attributes.watchlists IS NOT NULL,
 recent.entity.attributes.asset = LAST(TO_BOOLEAN(service.entity.attributes.asset), @timestamp) WHERE service.entity.attributes.asset IS NOT NULL,
 recent.entity.attributes.managed = LAST(TO_BOOLEAN(service.entity.attributes.managed), @timestamp) WHERE service.entity.attributes.managed IS NOT NULL,
 recent.entity.attributes.mfa_enabled = LAST(TO_BOOLEAN(service.entity.attributes.mfa_enabled), @timestamp) WHERE service.entity.attributes.mfa_enabled IS NOT NULL,
 recent.entity.lifecycle.first_seen = LAST(TO_DATETIME(service.entity.lifecycle.first_seen), @timestamp) WHERE service.entity.lifecycle.first_seen IS NOT NULL,
 recent.entity.lifecycle.last_activity = LAST(TO_DATETIME(service.entity.lifecycle.last_activity), @timestamp) WHERE service.entity.lifecycle.last_activity IS NOT NULL,
 recent.entity.behaviors.rule_names = TOP(MV_DEDUPE(TO_STRING(service.entity.behaviors.rule_names)), 100) WHERE service.entity.behaviors.rule_names IS NOT NULL,
 recent.entity.behaviors.anomaly_job_ids = TOP(MV_DEDUPE(TO_STRING(service.entity.behaviors.anomaly_job_ids)), 100) WHERE service.entity.behaviors.anomaly_job_ids IS NOT NULL,
 recent.entity.relationships.communicates_with = TOP(MV_DEDUPE(TO_STRING(service.entity.relationships.Communicates_with)), 10) WHERE service.entity.relationships.Communicates_with IS NOT NULL,
 recent.entity.relationships.depends_on = TOP(MV_DEDUPE(TO_STRING(service.entity.relationships.Depends_on)), 10) WHERE service.entity.relationships.Depends_on IS NOT NULL,
 recent.entity.relationships.owns_inferred = LAST(TO_STRING(entity.relationships.owns_inferred), @timestamp) WHERE entity.relationships.owns_inferred IS NOT NULL,
 recent.entity.relationships.accesses_infrequently = LAST(TO_STRING(entity.relationships.accesses_infrequently), @timestamp) WHERE entity.relationships.accesses_infrequently IS NOT NULL,
 recent.entity.relationships.resolution.resolved_to = LAST(TO_STRING(entity.relationships.resolution.resolved_to), @timestamp) WHERE entity.relationships.resolution.resolved_to IS NOT NULL,
 recent.entity.relationships.resolution.risk.calculated_level = LAST(TO_STRING(entity.relationships.resolution.risk.calculated_level), @timestamp) WHERE entity.relationships.resolution.risk.calculated_level IS NOT NULL,
 recent.entity.relationships.resolution.risk.calculated_score = LAST(TO_DOUBLE(entity.relationships.resolution.risk.calculated_score), @timestamp) WHERE entity.relationships.resolution.risk.calculated_score IS NOT NULL,
 recent.entity.relationships.resolution.risk.calculated_score_norm = LAST(TO_DOUBLE(entity.relationships.resolution.risk.calculated_score_norm), @timestamp) WHERE entity.relationships.resolution.risk.calculated_score_norm IS NOT NULL
    BY recent.entity.EngineMetadata.UntypedId
  | SORT entity.EngineMetadata.FirstSeenLogInPage ASC, recent.entity.EngineMetadata.UntypedId ASC
  
  | LIMIT 10000
  | EVAL recent.entity.id = CONCAT(\\"service:\\", recent.entity.EngineMetadata.UntypedId)
  | LOOKUP JOIN latest-index
      ON recent.entity.id == entity.id
  | EVAL entity.name = COALESCE(recent.entity.name, entity.name),
 service.entity.id = COALESCE(service.entity.id, recent.service.entity.id),
 service.name = MV_SLICE(MV_UNION(recent.service.name, service.name), 0, 9),
 service.address = MV_SLICE(MV_UNION(recent.service.address, service.address), 0, 9),
 service.environment = MV_SLICE(MV_UNION(recent.service.environment, service.environment), 0, 9),
 service.ephemeral_id = MV_SLICE(MV_UNION(recent.service.ephemeral_id, service.ephemeral_id), 0, 9),
 service.id = MV_SLICE(MV_UNION(recent.service.id, service.id), 0, 9),
 service.node.name = MV_SLICE(MV_UNION(recent.service.node.name, service.node.name), 0, 9),
 service.node.roles = MV_SLICE(MV_UNION(recent.service.node.roles, service.node.roles), 0, 9),
 service.node.role = MV_SLICE(MV_UNION(recent.service.node.role, service.node.role), 0, 9),
 service.state = COALESCE(recent.service.state, service.state),
 service.type = MV_SLICE(MV_UNION(recent.service.type, service.type), 0, 9),
 service.version = COALESCE(recent.service.version, service.version),
 entity.source = MV_SLICE(MV_UNION(recent.entity.source, entity.source), 0, 49),
 asset.id = COALESCE(recent.asset.id, asset.id),
 asset.name = COALESCE(recent.asset.name, asset.name),
 asset.owner = COALESCE(recent.asset.owner, asset.owner),
 asset.serial_number = COALESCE(recent.asset.serial_number, asset.serial_number),
 asset.model = COALESCE(recent.asset.model, asset.model),
 asset.vendor = COALESCE(recent.asset.vendor, asset.vendor),
 asset.environment = COALESCE(recent.asset.environment, asset.environment),
 asset.criticality = COALESCE(recent.asset.criticality, asset.criticality),
 asset.business_unit = COALESCE(recent.asset.business_unit, asset.business_unit),
 entity.type = COALESCE(recent.entity.type, entity.type),
 entity.sub_type = COALESCE(recent.entity.sub_type, entity.sub_type),
 entity.url = COALESCE(recent.entity.url, entity.url),
 entity.attributes.watchlists = COALESCE(recent.entity.attributes.watchlists, entity.attributes.watchlists),
 entity.attributes.asset = COALESCE(recent.entity.attributes.asset, entity.attributes.asset),
 entity.attributes.managed = COALESCE(recent.entity.attributes.managed, entity.attributes.managed),
 entity.attributes.mfa_enabled = COALESCE(recent.entity.attributes.mfa_enabled, entity.attributes.mfa_enabled),
 entity.lifecycle.first_seen = COALESCE(recent.entity.lifecycle.first_seen, entity.lifecycle.first_seen),
 entity.lifecycle.last_activity = COALESCE(recent.entity.lifecycle.last_activity, entity.lifecycle.last_activity),
 entity.behaviors.rule_names = MV_SLICE(MV_UNION(recent.entity.behaviors.rule_names, entity.behaviors.rule_names), 0, 99),
 entity.behaviors.anomaly_job_ids = MV_SLICE(MV_UNION(recent.entity.behaviors.anomaly_job_ids, entity.behaviors.anomaly_job_ids), 0, 99),
 entity.relationships.communicates_with = MV_SLICE(MV_UNION(recent.entity.relationships.communicates_with, entity.relationships.communicates_with), 0, 9),
 entity.relationships.depends_on = MV_SLICE(MV_UNION(recent.entity.relationships.depends_on, entity.relationships.depends_on), 0, 9),
 entity.relationships.owns_inferred = COALESCE(recent.entity.relationships.owns_inferred, entity.relationships.owns_inferred),
 entity.relationships.accesses_infrequently = COALESCE(recent.entity.relationships.accesses_infrequently, entity.relationships.accesses_infrequently),
 entity.relationships.resolution.resolved_to = COALESCE(recent.entity.relationships.resolution.resolved_to, entity.relationships.resolution.resolved_to),
 entity.relationships.resolution.risk.calculated_level = COALESCE(recent.entity.relationships.resolution.risk.calculated_level, entity.relationships.resolution.risk.calculated_level),
 entity.relationships.resolution.risk.calculated_score = COALESCE(recent.entity.relationships.resolution.risk.calculated_score, entity.relationships.resolution.risk.calculated_score),
 entity.relationships.resolution.risk.calculated_score_norm = COALESCE(recent.entity.relationships.resolution.risk.calculated_score_norm, entity.relationships.resolution.risk.calculated_score_norm)
  | EVAL @timestamp = recent.timestamp,
 entity.name = CASE(entity.name IS NOT NULL AND entity.name != \\"\\", entity.name, recent.entity.EngineMetadata.UntypedId),
 entity.EngineMetadata.Type = \\"service\\",
 entity.hashedId = HASH(\\"MD5\\", recent.entity.id),
 entity.type = COALESCE(entity.type, \\"Service\\")
  | RENAME
    recent.entity.id AS entity.id,
    recent.entity.EngineMetadata.UntypedId AS entity.EngineMetadata.UntypedId
  | KEEP entity.name,
 service.entity.id,
 service.name,
 service.address,
 service.environment,
 service.ephemeral_id,
 service.id,
 service.node.name,
 service.node.roles,
 service.node.role,
 service.state,
 service.type,
 service.version,
 entity.source,
 asset.id,
 asset.name,
 asset.owner,
 asset.serial_number,
 asset.model,
 asset.vendor,
 asset.environment,
 asset.criticality,
 asset.business_unit,
 entity.type,
 entity.sub_type,
 entity.url,
 entity.attributes.watchlists,
 entity.attributes.asset,
 entity.attributes.managed,
 entity.attributes.mfa_enabled,
 entity.lifecycle.first_seen,
 entity.lifecycle.last_activity,
 entity.behaviors.rule_names,
 entity.behaviors.anomaly_job_ids,
 entity.relationships.communicates_with,
 entity.relationships.depends_on,
 entity.relationships.owns_inferred,
 entity.relationships.accesses_infrequently,
 entity.relationships.resolution.resolved_to,
 entity.relationships.resolution.risk.calculated_level,
 entity.relationships.resolution.risk.calculated_score,
 entity.relationships.resolution.risk.calculated_score_norm,
 @timestamp,
 entity.id,
 entity.name,
 entity.EngineMetadata.UntypedId,
 entity.hashedId,
 entity.EngineMetadata.Type,
 entity.EngineMetadata.FirstSeenLogInPage"
`;

exports[`buildLogsExtractionEsqlQuery generates the expected query for user entity description 1`] = `
"FROM test-index-*
    METADATA _index
  | WHERE ((user.entity.id IS NOT NULL AND user.entity.id != \\"\\") OR (user.id IS NOT NULL AND user.id != \\"\\") OR (user.name IS NOT NULL AND user.name != \\"\\") OR (user.email IS NOT NULL AND user.email != \\"\\"))
      AND @timestamp > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
  | EVAL recent.entity.EngineMetadata.UntypedId = CASE((user.entity.id IS NOT NULL AND user.entity.id != \\"\\"), user.entity.id,
(user.name IS NOT NULL AND user.name != \\"\\" AND host.entity.id IS NOT NULL AND host.entity.id != \\"\\"), CONCAT(user.name, \\"@\\", host.entity.id),
(user.name IS NOT NULL AND user.name != \\"\\" AND host.id IS NOT NULL AND host.id != \\"\\"), CONCAT(user.name, \\"@\\", host.id),
(user.name IS NOT NULL AND user.name != \\"\\" AND host.name IS NOT NULL AND host.name != \\"\\"), CONCAT(user.name, \\"@\\", host.name),
(user.id IS NOT NULL AND user.id != \\"\\"), user.id,
(user.email IS NOT NULL AND user.email != \\"\\"), user.email,
(user.name IS NOT NULL AND user.name != \\"\\" AND user.domain IS NOT NULL AND user.domain != \\"\\"), CONCAT(user.name, \\"@\\", user.domain),
(user.name IS NOT NULL AND user.name != \\"\\"), user.name, NULL)
  | STATS
    entity.EngineMetadata.FirstSeenLogInPage = MIN(@timestamp),
    recent.timestamp = MAX(@timestamp),
    recent.entity.name = LAST(TO_STRING(user.name), @timestamp) WHERE user.name IS NOT NULL,
 recent.user.entity.id = FIRST(TO_STRING(user.entity.id), @timestamp) WHERE user.entity.id IS NOT NULL,
 recent.user.domain = TOP(MV_DEDUPE(TO_STRING(user.domain)), 10) WHERE user.domain IS NOT NULL,
 recent.user.email = TOP(MV_DEDUPE(TO_STRING(user.email)), 10) WHERE user.email IS NOT NULL,
 recent.user.name = TOP(MV_DEDUPE(TO_STRING(user.name)), 10) WHERE user.name IS NOT NULL,
 recent.user.full_name = TOP(MV_DEDUPE(TO_STRING(user.full_name)), 10) WHERE user.full_name IS NOT NULL,
 recent.user.hash = TOP(MV_DEDUPE(TO_STRING(user.hash)), 10) WHERE user.hash IS NOT NULL,
 recent.user.id = TOP(MV_DEDUPE(TO_STRING(user.id)), 10) WHERE user.id IS NOT NULL,
 recent.user.roles = TOP(MV_DEDUPE(TO_STRING(user.roles)), 10) WHERE user.roles IS NOT NULL,
 recent.user.group.domain = TOP(MV_DEDUPE(TO_STRING(user.group.domain)), 10) WHERE user.group.domain IS NOT NULL,
 recent.user.group.id = TOP(MV_DEDUPE(TO_STRING(user.group.id)), 10) WHERE user.group.id IS NOT NULL,
 recent.user.group.name = TOP(MV_DEDUPE(TO_STRING(user.group.name)), 10) WHERE user.group.name IS NOT NULL,
 recent.entity.source = TOP(MV_DEDUPE(TO_STRING(event.dataset)), 50) WHERE event.dataset IS NOT NULL,
 recent.asset.id = LAST(TO_STRING(asset.id), @timestamp) WHERE asset.id IS NOT NULL,
 recent.asset.name = LAST(TO_STRING(asset.name), @timestamp) WHERE asset.name IS NOT NULL,
 recent.asset.owner = LAST(TO_STRING(asset.owner), @timestamp) WHERE asset.owner IS NOT NULL,
 recent.asset.serial_number = LAST(TO_STRING(asset.serial_number), @timestamp) WHERE asset.serial_number IS NOT NULL,
 recent.asset.model = LAST(TO_STRING(asset.model), @timestamp) WHERE asset.model IS NOT NULL,
 recent.asset.vendor = LAST(TO_STRING(asset.vendor), @timestamp) WHERE asset.vendor IS NOT NULL,
 recent.asset.environment = LAST(TO_STRING(asset.environment), @timestamp) WHERE asset.environment IS NOT NULL,
 recent.asset.criticality = LAST(TO_STRING(asset.criticality), @timestamp) WHERE asset.criticality IS NOT NULL,
 recent.asset.business_unit = LAST(TO_STRING(asset.business_unit), @timestamp) WHERE asset.business_unit IS NOT NULL,
 recent.entity.type = LAST(TO_STRING(user.entity.type), @timestamp) WHERE user.entity.type IS NOT NULL,
 recent.entity.sub_type = LAST(TO_STRING(user.entity.sub_type), @timestamp) WHERE user.entity.sub_type IS NOT NULL,
 recent.entity.url = LAST(TO_STRING(user.entity.url), @timestamp) WHERE user.entity.url IS NOT NULL,
 recent.entity.attributes.watchlists = LAST(TO_STRING(user.entity.attributes.watchlists), @timestamp) WHERE user.entity.attributes.watchlists IS NOT NULL,
 recent.entity.attributes.asset = LAST(TO_BOOLEAN(user.entity.attributes.asset), @timestamp) WHERE user.entity.attributes.asset IS NOT NULL,
 recent.entity.attributes.managed = LAST(TO_BOOLEAN(user.entity.attributes.managed), @timestamp) WHERE user.entity.attributes.managed IS NOT NULL,
 recent.entity.attributes.mfa_enabled = LAST(TO_BOOLEAN(user.entity.attributes.mfa_enabled), @timestamp) WHERE user.entity.attributes.mfa_enabled IS NOT NULL,
 recent.entity.lifecycle.first_seen = LAST(TO_DATETIME(user.entity.lifecycle.first_seen), @timestamp) WHERE user.entity.lifecycle.first_seen IS NOT NULL,
 recent.entity.lifecycle.last_activity = LAST(TO_DATETIME(user.entity.lifecycle.last_activity), @timestamp) WHERE user.entity.lifecycle.last_activity IS NOT NULL,
 recent.entity.behaviors.rule_names = TOP(MV_DEDUPE(TO_STRING(user.entity.behaviors.rule_names)), 100) WHERE user.entity.behaviors.rule_names IS NOT NULL,
 recent.entity.behaviors.anomaly_job_ids = TOP(MV_DEDUPE(TO_STRING(user.entity.behaviors.anomaly_job_ids)), 100) WHERE user.entity.behaviors.anomaly_job_ids IS NOT NULL,
 recent.host.entity.id = TOP(MV_DEDUPE(TO_STRING(host.entity.id)), 10) WHERE host.entity.id IS NOT NULL,
 recent.host.id = TOP(MV_DEDUPE(TO_STRING(host.id)), 10) WHERE host.id IS NOT NULL,
 recent.host.name = TOP(MV_DEDUPE(TO_STRING(host.name)), 10) WHERE host.name IS NOT NULL,
 recent.entity.relationships.accesses_frequently = TOP(MV_DEDUPE(TO_STRING(user.entity.relationships.Accesses_frequently)), 10) WHERE user.entity.relationships.Accesses_frequently IS NOT NULL,
 recent.entity.relationships.owns = TOP(MV_DEDUPE(TO_STRING(user.entity.relationships.Owns)), 10) WHERE user.entity.relationships.Owns IS NOT NULL,
 recent.entity.relationships.supervises = TOP(MV_DEDUPE(TO_STRING(user.entity.relationships.Supervises)), 10) WHERE user.entity.relationships.Supervises IS NOT NULL,
 recent.entity.relationships.owns_inferred = LAST(TO_STRING(entity.relationships.owns_inferred), @timestamp) WHERE entity.relationships.owns_inferred IS NOT NULL,
 recent.entity.relationships.accesses_infrequently = LAST(TO_STRING(entity.relationships.accesses_infrequently), @timestamp) WHERE entity.relationships.accesses_infrequently IS NOT NULL,
 recent.entity.relationships.resolution.resolved_to = LAST(TO_STRING(entity.relationships.resolution.resolved_to), @timestamp) WHERE entity.relationships.resolution.resolved_to IS NOT NULL,
 recent.entity.relationships.resolution.risk.calculated_level = LAST(TO_STRING(entity.relationships.resolution.risk.calculated_level), @timestamp) WHERE entity.relationships.resolution.risk.calculated_level IS NOT NULL,
 recent.entity.relationships.resolution.risk.calculated_score = LAST(TO_DOUBLE(entity.relationships.resolution.risk.calculated_score), @timestamp) WHERE entity.relationships.resolution.risk.calculated_score IS NOT NULL,
 recent.entity.relationships.resolution.risk.calculated_score_norm = LAST(TO_DOUBLE(entity.relationships.resolution.risk.calculated_score_norm), @timestamp) WHERE entity.relationships.resolution.risk.calculated_score_norm IS NOT NULL
    BY recent.entity.EngineMetadata.UntypedId
  | SORT entity.EngineMetadata.FirstSeenLogInPage ASC, recent.entity.EngineMetadata.UntypedId ASC
  
  | LIMIT 10000
  | EVAL recent.entity.id = CONCAT(\\"user:\\", recent.entity.EngineMetadata.UntypedId)
  | LOOKUP JOIN latest-index
      ON recent.entity.id == entity.id
  | EVAL entity.name = COALESCE(recent.entity.name, entity.name),
 user.entity.id = COALESCE(user.entity.id, recent.user.entity.id),
 user.domain = MV_SLICE(MV_UNION(recent.user.domain, user.domain), 0, 9),
 user.email = MV_SLICE(MV_UNION(recent.user.email, user.email), 0, 9),
 user.name = MV_SLICE(MV_UNION(recent.user.name, user.name), 0, 9),
 user.full_name = MV_SLICE(MV_UNION(recent.user.full_name, user.full_name), 0, 9),
 user.hash = MV_SLICE(MV_UNION(recent.user.hash, user.hash), 0, 9),
 user.id = MV_SLICE(MV_UNION(recent.user.id, user.id), 0, 9),
 user.roles = MV_SLICE(MV_UNION(recent.user.roles, user.roles), 0, 9),
 user.group.domain = MV_SLICE(MV_UNION(recent.user.group.domain, user.group.domain), 0, 9),
 user.group.id = MV_SLICE(MV_UNION(recent.user.group.id, user.group.id), 0, 9),
 user.group.name = MV_SLICE(MV_UNION(recent.user.group.name, user.group.name), 0, 9),
 entity.source = MV_SLICE(MV_UNION(recent.entity.source, entity.source), 0, 49),
 asset.id = COALESCE(recent.asset.id, asset.id),
 asset.name = COALESCE(recent.asset.name, asset.name),
 asset.owner = COALESCE(recent.asset.owner, asset.owner),
 asset.serial_number = COALESCE(recent.asset.serial_number, asset.serial_number),
 asset.model = COALESCE(recent.asset.model, asset.model),
 asset.vendor = COALESCE(recent.asset.vendor, asset.vendor),
 asset.environment = COALESCE(recent.asset.environment, asset.environment),
 asset.criticality = COALESCE(recent.asset.criticality, asset.criticality),
 asset.business_unit = COALESCE(recent.asset.business_unit, asset.business_unit),
 entity.type = COALESCE(recent.entity.type, entity.type),
 entity.sub_type = COALESCE(recent.entity.sub_type, entity.sub_type),
 entity.url = COALESCE(recent.entity.url, entity.url),
 entity.attributes.watchlists = COALESCE(recent.entity.attributes.watchlists, entity.attributes.watchlists),
 entity.attributes.asset = COALESCE(recent.entity.attributes.asset, entity.attributes.asset),
 entity.attributes.managed = COALESCE(recent.entity.attributes.managed, entity.attributes.managed),
 entity.attributes.mfa_enabled = COALESCE(recent.entity.attributes.mfa_enabled, entity.attributes.mfa_enabled),
 entity.lifecycle.first_seen = COALESCE(recent.entity.lifecycle.first_seen, entity.lifecycle.first_seen),
 entity.lifecycle.last_activity = COALESCE(recent.entity.lifecycle.last_activity, entity.lifecycle.last_activity),
 entity.behaviors.rule_names = MV_SLICE(MV_UNION(recent.entity.behaviors.rule_names, entity.behaviors.rule_names), 0, 99),
 entity.behaviors.anomaly_job_ids = MV_SLICE(MV_UNION(recent.entity.behaviors.anomaly_job_ids, entity.behaviors.anomaly_job_ids), 0, 99),
 host.entity.id = MV_SLICE(MV_UNION(recent.host.entity.id, host.entity.id), 0, 9),
 host.id = MV_SLICE(MV_UNION(recent.host.id, host.id), 0, 9),
 host.name = MV_SLICE(MV_UNION(recent.host.name, host.name), 0, 9),
 entity.relationships.accesses_frequently = MV_SLICE(MV_UNION(recent.entity.relationships.accesses_frequently, entity.relationships.accesses_frequently), 0, 9),
 entity.relationships.owns = MV_SLICE(MV_UNION(recent.entity.relationships.owns, entity.relationships.owns), 0, 9),
 entity.relationships.supervises = MV_SLICE(MV_UNION(recent.entity.relationships.supervises, entity.relationships.supervises), 0, 9),
 entity.relationships.owns_inferred = COALESCE(recent.entity.relationships.owns_inferred, entity.relationships.owns_inferred),
 entity.relationships.accesses_infrequently = COALESCE(recent.entity.relationships.accesses_infrequently, entity.relationships.accesses_infrequently),
 entity.relationships.resolution.resolved_to = COALESCE(recent.entity.relationships.resolution.resolved_to, entity.relationships.resolution.resolved_to),
 entity.relationships.resolution.risk.calculated_level = COALESCE(recent.entity.relationships.resolution.risk.calculated_level, entity.relationships.resolution.risk.calculated_level),
 entity.relationships.resolution.risk.calculated_score = COALESCE(recent.entity.relationships.resolution.risk.calculated_score, entity.relationships.resolution.risk.calculated_score),
 entity.relationships.resolution.risk.calculated_score_norm = COALESCE(recent.entity.relationships.resolution.risk.calculated_score_norm, entity.relationships.resolution.risk.calculated_score_norm)
  | EVAL @timestamp = recent.timestamp,
 entity.name = CASE(entity.name IS NOT NULL AND entity.name != \\"\\", entity.name, recent.entity.EngineMetadata.UntypedId),
 entity.EngineMetadata.Type = \\"user\\",
 entity.hashedId = HASH(\\"MD5\\", recent.entity.id),
 entity.type = COALESCE(entity.type, \\"Identity\\")
  | RENAME
    recent.entity.id AS entity.id,
    recent.entity.EngineMetadata.UntypedId AS entity.EngineMetadata.UntypedId
  | KEEP entity.name,
 user.entity.id,
 user.domain,
 user.email,
 user.name,
 user.full_name,
 user.hash,
 user.id,
 user.roles,
 user.group.domain,
 user.group.id,
 user.group.name,
 entity.source,
 asset.id,
 asset.name,
 asset.owner,
 asset.serial_number,
 asset.model,
 asset.vendor,
 asset.environment,
 asset.criticality,
 asset.business_unit,
 entity.type,
 entity.sub_type,
 entity.url,
 entity.attributes.watchlists,
 entity.attributes.asset,
 entity.attributes.managed,
 entity.attributes.mfa_enabled,
 entity.lifecycle.first_seen,
 entity.lifecycle.last_activity,
 entity.behaviors.rule_names,
 entity.behaviors.anomaly_job_ids,
 host.entity.id,
 host.id,
 host.name,
 entity.relationships.accesses_frequently,
 entity.relationships.owns,
 entity.relationships.supervises,
 entity.relationships.owns_inferred,
 entity.relationships.accesses_infrequently,
 entity.relationships.resolution.resolved_to,
 entity.relationships.resolution.risk.calculated_level,
 entity.relationships.resolution.risk.calculated_score,
 entity.relationships.resolution.risk.calculated_score_norm,
 @timestamp,
 entity.id,
 entity.name,
 entity.EngineMetadata.UntypedId,
 entity.hashedId,
 entity.EngineMetadata.Type,
 entity.EngineMetadata.FirstSeenLogInPage"
`;

exports[`buildRemainingLogsCountQuery generates the expected query for generic entity type 1`] = `
"FROM test-index-*
    METADATA _index
  | WHERE ((entity.id IS NOT NULL AND entity.id != \\"\\"))
      AND @timestamp > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
  | STATS document_count = COUNT()"
`;

exports[`buildRemainingLogsCountQuery generates the expected query for host entity type 1`] = `
"FROM test-index-*
    METADATA _index
  | WHERE ((host.entity.id IS NOT NULL AND host.entity.id != \\"\\") OR (host.id IS NOT NULL AND host.id != \\"\\") OR (host.name IS NOT NULL AND host.name != \\"\\") OR (host.hostname IS NOT NULL AND host.hostname != \\"\\"))
      AND @timestamp > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
  | STATS document_count = COUNT()"
`;

exports[`buildRemainingLogsCountQuery generates the expected query for service entity type 1`] = `
"FROM test-index-*
    METADATA _index
  | WHERE ((service.entity.id IS NOT NULL AND service.entity.id != \\"\\") OR (service.name IS NOT NULL AND service.name != \\"\\"))
      AND @timestamp > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
  | STATS document_count = COUNT()"
`;

exports[`buildRemainingLogsCountQuery generates the expected query for user entity type 1`] = `
"FROM test-index-*
    METADATA _index
  | WHERE ((user.entity.id IS NOT NULL AND user.entity.id != \\"\\") OR (user.id IS NOT NULL AND user.id != \\"\\") OR (user.name IS NOT NULL AND user.name != \\"\\") OR (user.email IS NOT NULL AND user.email != \\"\\"))
      AND @timestamp > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
  | STATS document_count = COUNT()"
`;
